locale update... slight format change with node yamlification

--- a/config/locales/frontpage.el.yml
+++ b/config/locales/frontpage.el.yml
@@ -1,64 +1,64 @@
 el:
   frontpage:
-    view_this_in_your_language: 'Δείτε αυτή την ιστοσελίδα σε %{language}'
+    view_this_in_your_language: "Δείτε αυτή την ιστοσελίδα σε %{language}"
     title:
       collaborative_decision_making: Συλλογική λήψη αποφάσεων
     link:
-      blog: 'Ιστολόγιο'
-      contact: 'Επικοινωνία'
-      donate: 'Κάντε δωρεά σημέρα'
-      press: 'Τύπος'
-      try_it: 'Δοκιμάστε το'
-      log_in: 'Εισέλθετε'
-      video: "Δείτε περισσότερα για το πώς δουλεύει το Loomio"
-      try_loomio_beta: 'Δοκιμάστε την δοκιμαστική έκδοση του Loomio'
-      check_out_loomio_beta: 'Δείτε την δοκιμαστική έκδοση του Loomio'
-      more: 'Περισσότερα'
-      top: 'Κορυφή'
-      public_groups: 'Δημόσιες ομάδες'
-      terms: 'Όροι'
-      privacy: 'Απόρρητο'
-      services: 'Υπηρεσίες'
+      blog: Ιστολόγιο
+      contact: Επικοινωνία
+      donate: Κάντε δωρεά σημέρα
+      press: Τύπος
+      try_it: Δοκιμάστε το
+      log_in: Εισέλθετε
+      video: Δείτε περισσότερα για το πώς δουλεύει το Loomio
+      try_loomio_beta: Δοκιμάστε την δοκιμαστική έκδοση του Loomio
+      check_out_loomio_beta: Δείτε την δοκιμαστική έκδοση του Loomio
+      more: Περισσότερα
+      top: Κορυφή
+      public_groups: Δημόσιες ομάδες
+      terms: Όροι
+      privacy: Απόρρητο
+      services: Υπηρεσίες
     hero:
-      head_html: 'Ο κόσμος χρειάζεται ένα καλύτερο τρόπο για να <strong>παίρνει αποφάσεις από κοινού</strong>.'
-      desc_html: 'Το Loomio είναι δωρεάν και  <a href="https://github.com/loomio/loomio">ανοιχτού κώδικα</a>  λογισμικό για όλους, παντού, ώστε να συμμετάσχουν σε αποφάσεις που τους αφορούν.'
+      head_html: "Ο κόσμος χρειάζεται ένα καλύτερο τρόπο για να <strong>παίρνει αποφάσεις από κοινού</strong>."
+      desc_html: "Το Loomio είναι δωρεάν και  <a href=\"https://github.com/loomio/loomio\">ανοιχτού κώδικα</a>  λογισμικό για όλους, παντού, ώστε να συμμετάσχουν σε αποφάσεις που τους αφορούν."
     product:
-      header_html: 'Όταν ακούμε <strong>όλες τις φωνές</strong>, παίρνουμε <strong>καλύτερες αποφάσεις.</strong>'
+      header_html: "Όταν ακούμε <strong>όλες τις φωνές</strong>, παίρνουμε <strong>καλύτερες αποφάσεις.</strong>"
       step1:
-        header: '1. Συζητήστε τα πράγματα από μέσα'
-        desc: 'Ξεκινήστε μια συζήτηση με οποιοδήποτε θέμα, και φέρτε την σε σωστούς ανθρώπους.  Μοιραστείτε τις διαφορετικές προοπτικές και αναπτύξτε από κοινού τις ιδέες.'
+        header: 1. Συζητήστε τα πράγματα από μέσα
+        desc: "Ξεκινήστε μια συζήτηση με οποιοδήποτε θέμα, και φέρτε την σε σωστούς ανθρώπους.  Μοιραστείτε τις διαφορετικές προοπτικές και αναπτύξτε από κοινού τις ιδέες."
       step2:
-        header: '2. Συμφωνία κατασκευής'
-        desc: 'Ο καθένας μπορεί να προτείνει ένα σχέδιο δράσης. Οι άνθρωποι μπορούν να συμφωνήσουν, να απέχουν, να διαφωνήσουν, ή να αποκλείσουν – έτσι μπορείτε να δείτε πως αισθάνεται ο καθένας, και γιατί.'
+        header: 2. Συμφωνία κατασκευής
+        desc: "Ο καθένας μπορεί να προτείνει ένα σχέδιο δράσης. Οι άνθρωποι μπορούν να συμφωνήσουν, να απέχουν, να διαφωνήσουν, ή να αποκλείσουν – έτσι μπορείτε να δείτε πως αισθάνεται ο καθένας, και γιατί."
       step3:
-        header: '3. Αποφασίστε από κοινού'
-        desc: 'Αναπτύξτε από κοινού την πρόταση ώστε να δουλεύει για όλους. Κάθε απόφαση έχει σαφή προθεσμία, ώστε να έχετε πάντα ένα σαφές συμπέρασμα.'
+        header: 3. Αποφασίστε από κοινού
+        desc: "Αναπτύξτε από κοινού την πρόταση ώστε να δουλεύει για όλους. Κάθε απόφαση έχει σαφή προθεσμία, ώστε να έχετε πάντα ένα σαφές συμπέρασμα."
     crowdfunding:
-      header: 'Χρηματοδοτούμαστε από το πλήθος ώστε να μπορούμε να τελειώσουμε το φτιάξιμο αυτής της νέας πλατφόρμας και να το δώσουμε στον κόσμο.'
+      header: Χρηματοδοτούμαστε από το πλήθος ώστε να μπορούμε να τελειώσουμε το φτιάξιμο αυτής της νέας πλατφόρμας και να το δώσουμε στον κόσμο.
     prototype:
       header_html: "Ήδη έχουμε χτίσει το πρωτότυπο, και οι άνθρωποι απ' όλον τον κόσμο κάνουμε απίθανα πράγματα με αυτό"
-      subhead_html: '<a href="%{try_loomio_link}">Δοκιμάστε την δοκιμαστική έκδοση του Loomio</a> τώρα. ή μπορείτε <a href="%{donate_link}"> να υποστηρίξετε το έργο</a> για να βοηθήσετε στην χρηματοδότηση του Loomio 1.0'
+      subhead_html: "<a href=\"%{try_loomio_link}\">Δοκιμάστε την δοκιμαστική έκδοση του Loomio</a> τώρα. ή μπορείτε <a href=\"%{donate_link}\"> να υποστηρίξετε το έργο</a> για να βοηθήσετε στην χρηματοδότηση του Loomio 1.0"
     mobile:
-      header_html: 'Το Loomio 1.0 θα δουλεύει σε οποιαδήποτε συσκευή, χτισμένο με την <strong>καλύτερη ανοιχτή κινητή τεχνολογία.</strong>'
+      header_html: "Το Loomio 1.0 θα δουλεύει σε οποιαδήποτε συσκευή, χτισμένο με την <strong>καλύτερη ανοιχτή κινητή τεχνολογία.</strong>"
     quote:
       header:
-        rushkoff_html: '“Το Loomio<strong>απελευθερώνει τις δυνατότητες υου διαδικτύου</strong> για να φέρει τους ανθρώπους προς τη συναίνεση παρά την πολωμένη συζήτηση.”<div class="attributation">– <a href="http://rushkoff.com">Douglas Rushkoff</a>, author of <em>Present Shock</em></div>'
-        sifry_html: '“Το Loomio χτυπά ένα γλυκό σημείο μεταξύ <strong>της ατομικής φωνής</strong> και <strong>της συλλογικής απόφασης</strong>.”<div class="attributation">– Micah Sifry, Editor, <em><a href="http://techpresident.com">TechPresident</a></em></div>'
+        rushkoff_html: "“Το Loomio<strong>απελευθερώνει τις δυνατότητες υου διαδικτύου</strong> για να φέρει τους ανθρώπους προς τη συναίνεση παρά την πολωμένη συζήτηση.”<div class=\"attributation\">– <a href=\"http://rushkoff.com\">Douglas Rushkoff</a>, author of <em>Present Shock</em></div>"
+        sifry_html: "“Το Loomio χτυπά ένα γλυκό σημείο μεταξύ <strong>της ατομικής φωνής</strong> και <strong>της συλλογικής απόφασης</strong>.”<div class=\"attributation\">– Micah Sifry, Editor, <em><a href=\"http://techpresident.com\">TechPresident</a></em></div>"
     team:
-      header: 'Σχετικά με το Loomio'
-      desc: 'Είμαστε μια μικρή ομάδα προγραμματιστών ανοιχτού κώδικα και ακτιβιστές της κοινωνικής δικαιοσύνης που εργαζόμαστε στο Enspiral στην Aotearoa Νέας Ζηλανδίας, με ένα ευρύτερο δίκτυο φίλων, υποστηρικτών και συμβούλους σε όλο τον κόσμο.'
+      header: Σχετικά με το Loomio
+      desc: "Είμαστε μια μικρή ομάδα προγραμματιστών ανοιχτού κώδικα και ακτιβιστές της κοινωνικής δικαιοσύνης που εργαζόμαστε στο Enspiral στην Aotearoa Νέας Ζηλανδίας, με ένα ευρύτερο δίκτυο φίλων, υποστηρικτών και συμβούλους σε όλο τον κόσμο."
     ideals:
       community:
-        header: 'Προσανατολισμένη στο κοινοτικό συμφέρον του συνεταιρισμού'
-        desc: 'Το Loomio είναι χτισμένο από έναν εργαζόμενο που ανήκει σε συνεταιρισμό. Είμαστε μια κοινωνική επιχείρηση που εργαζόμαστε για τη μεγιστοποίηση του θετικού κοινωνικού αντίκτυπου, όχι το κέρδος.'
+        header: Προσανατολισμένη στο κοινοτικό συμφέρον του συνεταιρισμού
+        desc: "Το Loomio είναι χτισμένο από έναν εργαζόμενο που ανήκει σε συνεταιρισμό. Είμαστε μια κοινωνική επιχείρηση που εργαζόμαστε για τη μεγιστοποίηση του θετικού κοινωνικού αντίκτυπου, όχι το κέρδος."
       independent:
-        header: 'Ανεξάρτητο και ουδέτερο'
-        desc: 'Διαχειριζόμαστε έναν χώρο για οποιαδήποτε ομάδα να μπορεί να έρθουν μαζί, αυτό είναι ανεξάρτητο από πολιτικό ή επιχειρησιακό ενδιαφέρον. Ποτέ δεν θα πουλήσουμε τα δεδομένα σας.'
+        header: Ανεξάρτητο και ουδέτερο
+        desc: "Διαχειριζόμαστε έναν χώρο για οποιαδήποτε ομάδα να μπορεί να έρθουν μαζί, αυτό είναι ανεξάρτητο από πολιτικό ή επιχειρησιακό ενδιαφέρον. Ποτέ δεν θα πουλήσουμε τα δεδομένα σας."
       open:
-        header: 'Δωρεάν και ανοιχτό λογισμικό'
-        desc: 'Ο κώδικας του Loomio είναι ένα δημόσιος πόρος που οποιοσδήποτε μπορεί να τρέξει, να διαβάσει, να μάθει από αυτόν, να τον τροποποιήσει και να τον αναδιανείμει.'
+        header: Δωρεάν και ανοιχτό λογισμικό
+        desc: "Ο κώδικας του Loomio είναι ένα δημόσιος πόρος που οποιοσδήποτε μπορεί να τρέξει, να διαβάσει, να μάθει από αυτόν, να τον τροποποιήσει και να τον αναδιανείμει."
       gift:
-        header: 'Δώρο οικονομίας'
-        desc: 'Το Loomio υποστηρίζεται από εκείνους που πληρώνουν ανάλογα με τις δυνατότητές τους. Αυτό κρατά την πλατφόρμα χωρίς διαφημίσεις και προσβάσιμη σε ομάδες χωρίς χρήματα.'
+        header: Δώρο οικονομίας
+        desc: Το Loomio υποστηρίζεται από εκείνους που πληρώνουν ανάλογα με τις δυνατότητές τους. Αυτό κρατά την πλατφόρμα χωρίς διαφημίσεις και προσβάσιμη σε ομάδες χωρίς χρήματα.
     vision:
-      header: 'Βοηθήστε μας να μετατρέψουμε αυτό το όραμα σε πραγματικότητα.'
+      header: Βοηθήστε μας να μετατρέψουμε αυτό το όραμα σε πραγματικότητα.
