--- a/config/locales/frontpage.te.yml
+++ b/config/locales/frontpage.te.yml
@@ -1,13 +1,13 @@
 te:
   frontpage:
     link:
-      blog: 'బ్లాగు'
-      contact: 'సంప్రదించండి'
-      more: 'మరింత'
-      top: 'పైకి'
-      public_groups: 'బహిరంగ సమూహాలు'
-      terms: 'షరతులు'
-      services: 'సేవలు'
+      blog: బ్లాగు
+      contact: సంప్రదించండి
+      more: మరింత
+      top: పైకి
+      public_groups: బహిరంగ సమూహాలు
+      terms: షరతులు
+      services: సేవలు
     ideals:
       independent:
-        header: 'స్వతంత్రం మరియు తటస్థం'
+        header: స్వతంత్రం మరియు తటస్థం
