--- a/config/locales/ur-PK.yml
+++ b/config/locales/ur-PK.yml
@@ -2,5 +2,5 @@ ur-PK:
   users:
     email_preferences:
       edit:
-        title: 'ایمیل ترجیحات'
-  google: "Google"
+        title: ایمیل ترجیحات
+  google: Google
