--- a/config/locales/cmn.yml
+++ b/config/locales/cmn.yml
@@ -1,58 +1,58 @@
 cmn:
   errors:
     messages:
-      email: "不是一个有效的电子邮箱地址"
+      email: 不是一个有效的电子邮箱地址
   time:
     formats:
-      for_today: '%1：%M%P'
+      for_today: "%1：%M%P"
   date:
     formats:
-      for_this_year: '%e%b'
-      for_another_year: '%-d/%-m/%y'
+      for_this_year: "%e%b"
+      for_another_year: "%-d/%-m/%y"
   error:
-    cant_join_subgroup: "如果你不是大组的一员那你就不能加入一个小组"
-    cant_modify_position: "这提议已经关闭了"
-    cant_state_position: "这提议已经关闭了"
-    discussion_not_created: "讨论不代表创建"
-    group_not_archived: "组是不能存档的"
-    invalid_close_date: "日期无效，请检查这个日期是否通过"
-    invalid_email: "请输入至少一个有效邮箱地址"
-    image_upload_fail: "无法上传图片。确定图片是在1MB之内并且格式是jpeg.png或者是gif"
-    permission_to_invite: "你没有邀请成员的许可"
-    position_not_updated: "无法更新位置"
-    settings_not_updated: "您的位置还没有更新"
-    group_request_already_accepted: "对不起！这个邀请无效或者已经接受过"
-    proposal_already_exists: "已经有一个开放式的建议在此讨论"
+    cant_join_subgroup: 如果你不是大组的一员那你就不能加入一个小组
+    cant_modify_position: 这提议已经关闭了
+    cant_state_position: 这提议已经关闭了
+    discussion_not_created: 讨论不代表创建
+    group_not_archived: 组是不能存档的
+    invalid_close_date: 日期无效，请检查这个日期是否通过
+    invalid_email: 请输入至少一个有效邮箱地址
+    image_upload_fail: 无法上传图片。确定图片是在1MB之内并且格式是jpeg.png或者是gif
+    permission_to_invite: 你没有邀请成员的许可
+    position_not_updated: 无法更新位置
+    settings_not_updated: 您的位置还没有更新
+    group_request_already_accepted: 对不起！这个邀请无效或者已经接受过
+    proposal_already_exists: 已经有一个开放式的建议在此讨论
   alert:
     duplicate_email: "%{which_email}已经在这个团队里了？"
   notice:
-    member_removed: "删除成员。"
-    membership_request_canceled: "会员请求取消"
-    membership_request_ignored: "会员请求被忽略"
-    settings_updated: "您的设置已经更新"
+    member_removed: 删除成员。
+    membership_request_canceled: 会员请求取消
+    membership_request_ignored: 会员请求被忽略
+    settings_updated: 您的设置已经更新
     you_have_left_group: "你已经离开%{which_group}"
   views:
     pagination:
-      previous: "上一个"
-      next: "下一个"
+      previous: 上一个
+      next: 下一个
   warning:
-    membership_request_already_ignored: "会员资格已经被忽略"
-    membership_request_already_canceled: "会员资格已经被取消"
-    position_not_submitted: "你的位置不能提交"
-    proposal_not_created: "建议不能创建"
+    membership_request_already_ignored: 会员资格已经被忽略
+    membership_request_already_canceled: 会员资格已经被取消
+    position_not_submitted: 你的位置不能提交
+    proposal_not_created: 建议不能创建
   success:
     added_to_group: "你已经被添加到%{which_group}"
-    close_date_changed: "成功更改截止日期"
-    discussion_created: "讨论创建成功"
-    discussion_deleted: "讨论删除成功"
-    emails_sending: "正在发邮件"
-    group_archived: "团队存档成功"
-    group_created: "团队创建成功"
-    members_added: "成员添加到组"
-    position_submitted: "提交的位置"
-    position_updated: "更新位置"
-    proposal_created: "提案成功创建"
-    proposal_deleted: "建议删除"
+    close_date_changed: 成功更改截止日期
+    discussion_created: 讨论创建成功
+    discussion_deleted: 讨论删除成功
+    emails_sending: 正在发邮件
+    group_archived: 团队存档成功
+    group_created: 团队创建成功
+    members_added: 成员添加到组
+    position_submitted: 提交的位置
+    position_updated: 更新位置
+    proposal_created: 提案成功创建
+    proposal_deleted: 建议删除
   datetime:
     distance_in_words:
       x_seconds:
@@ -76,272 +76,272 @@ cmn:
       almost_x_years:
         other: "%{count}年"
   footer:
-    public_groups: '公共组团'
+    public_groups: 公共组团
   inbox:
-    dropdown-btn: '收件箱'
+    dropdown-btn: 收件箱
   notifications:
     motion_closed:
-      by_user: "关闭提议"
-      by_expiry: "提议已经关闭了"
+      by_user: 关闭提议
+      by_expiry: 提议已经关闭了
     new_vote: "%{position}建议上的"
-    new_comment: "讨论后的评论"
-    comment_liked: "喜欢你在讨论中说的评论"
-    user_mentioned: "在评论中提到了你"
-    membership_requested: "要求会员"
-    user_added_to_group: "把你添加到组"
-    motion_closing_soon: "提议很快就要关闭了"
-    motion_blocked: "封锁了提议"
-  edit_discussion_context: "编辑讨论上下文"
-  empty_notifications: "你还没有任何通知"
-  see_all_notifications: "看到所有的通知"
-  sign_out: "推出"
-  tagline: "我们想要创造一个世界那么任何人就要参与与商讨及影响他们日常生活的决议"
-  click_to_dismiss: "点击这里移除这条信息。"
-  generic_confirm: "您确定吗？"
+    new_comment: 讨论后的评论
+    comment_liked: 喜欢你在讨论中说的评论
+    user_mentioned: 在评论中提到了你
+    membership_requested: 要求会员
+    user_added_to_group: 把你添加到组
+    motion_closing_soon: 提议很快就要关闭了
+    motion_blocked: 封锁了提议
+  edit_discussion_context: 编辑讨论上下文
+  empty_notifications: 你还没有任何通知
+  see_all_notifications: 看到所有的通知
+  sign_out: 推出
+  tagline: 我们想要创造一个世界那么任何人就要参与与商讨及影响他们日常生活的决议
+  click_to_dismiss: 点击这里移除这条信息。
+  generic_confirm: 您确定吗？
   discussion_helper_text:
-    header: "欢迎你来参与第一次的讨论"
-  setup_steps_title: "下一步"
-  setup_step_2: "开始你的第一个讨论"
-  setup_step_3: "邀请人到你的组里"
-  invite_people: "邀请人"
-  edit_memberships: '编辑会员'
-  add_new_member: "加新的成员"
+    header: 欢迎你来参与第一次的讨论
+  setup_steps_title: 下一步
+  setup_step_2: 开始你的第一个讨论
+  setup_step_3: 邀请人到你的组里
+  invite_people: 邀请人
+  edit_memberships: 编辑会员
+  add_new_member: 加新的成员
   invite_members_to_group: "邀请成员加入%{which_group}"
-  get_in_touch_link: "联系我们"
+  get_in_touch_link: 联系我们
   email_members_in_group: "给%{which_group}发邮件"
-  subject_error: "请填写一个主题"
-  subject_placeholder: "写一个主题"
-  message_error: "请填写信息"
+  subject_error: 请填写一个主题
+  subject_placeholder: 写一个主题
+  message_error: 请填写信息
   message_placeholder: "填写%{which_group}这个成员的消息"
-  email_group_members: "给组员发邮件"
-  edit_group_settings: "编辑团队设置"
-  leave_group: "离开团队"
+  email_group_members: 给组员发邮件
+  edit_group_settings: 编辑团队设置
+  leave_group: 离开团队
   confirm_leave_hidden_group: "你确定你要离开%{which_group}吗？同时你也会被其他小组给移除的"
   confirm_leave_group: "你确定你想要离开 %{which_group}？"
-  deactivate_group: "取消团队"
+  deactivate_group: 取消团队
   confirm_deactivate_group: "等等！！！你确定你想要取消%{which_group}？那你就再也查不到这个组了，但是，如果你想要重新激活这个组，你可以通过发送邮件到contact@loomio.org"
-  invited_users: "邀请成员"
-  members: "成员"
+  invited_users: 邀请成员
+  members: 成员
   confirm_remove_user: "你确定你要从这个组中删除%{which_user}吗？"
-  membership_requests: "会员资格请求"
+  membership_requests: 会员资格请求
   confirm_approve_membership_request: "你确定你要添加%{which_user}到这个组吗？"
-  ignore_request: "忽略请求"
+  ignore_request: 忽略请求
   confirm_ignore_membership_request: "你确定你要忽略这个会员%{which_user}的请求吗？"
-  request_membership: "请求加入会员"
-  confirm_remove_membership_request: "你确定你要撤回对这个组的会员资格吗？"
-  subgroups: "小组群体"
-  create_a_subgroup: "创建一个小组"
+  request_membership: 请求加入会员
+  confirm_remove_membership_request: 你确定你要撤回对这个组的会员资格吗？
+  subgroups: 小组群体
+  create_a_subgroup: 创建一个小组
   select_members_to_add: "选择添加成员到%{which_group}"
-  empty_parent_group: "请首先将成员添加到主组"
-  invite_members: "邀请成员"
-  new_subgroup: "新的小组"
-  create_subgroup: "创建小组"
-  creating_subgroup: "小组创建中"
-  new_group: "新组"
-  create_group: "创建一个组"
-  creating_group: "组正在创建中"
-  edit_group: "编辑该组"
-  update_group: "更新组"
-  updating_group: "组正在更新中"
-  start_a_discussion: "开始讨论"
-  group_description: "团队讨论"
+  empty_parent_group: 请首先将成员添加到主组
+  invite_members: 邀请成员
+  new_subgroup: 新的小组
+  create_subgroup: 创建小组
+  creating_subgroup: 小组创建中
+  new_group: 新组
+  create_group: 创建一个组
+  creating_group: 组正在创建中
+  edit_group: 编辑该组
+  update_group: 更新组
+  updating_group: 组正在更新中
+  start_a_discussion: 开始讨论
+  group_description: 团队讨论
   discussion_items:
-    new_discussion: "创建了这个讨论。"
-    new_motion: "创建了这个提议。"
+    new_discussion: 创建了这个讨论。
+    new_motion: 创建了这个提议。
     motion_closed:
-      by_user: "关闭这一提议。"
-      by_expiry: "提议关闭了"
-    motion_close_date_edited: "改变了提案的截止日期。"
-    discussion_title_edited: "改变了讨论题目。"
-    discussion_description_edited: "改变讨论描述"
-  discussion: "讨论"
-  current_decision: "目前的决定"
-  previous_decisions: "先前的决定"
-  see_previous_decisions: "看看之前的决定"
-  empty_decision_index: "这个组还没有做出什么决定"
-  empty_discussion_list: "这一条讨论还没有发表"
+      by_user: 关闭这一提议。
+      by_expiry: 提议关闭了
+    motion_close_date_edited: 改变了提案的截止日期。
+    discussion_title_edited: 改变了讨论题目。
+    discussion_description_edited: 改变讨论描述
+  discussion: 讨论
+  current_decision: 目前的决定
+  previous_decisions: 先前的决定
+  see_previous_decisions: 看看之前的决定
+  empty_decision_index: 这个组还没有做出什么决定
+  empty_discussion_list: 这一条讨论还没有发表
   discussion_context:
-    see_revision_history: "看历史修订"
+    see_revision_history: 看历史修订
   description_history:
-    header: "历史修订"
-    subheader: "版本"
-    current: "(当前的)"
-    restore: "(恢复这个版本)"
-    applying_changes: "(申请更改)"
-    previous: "上一个"
-    next: "下一个"
-  comment_form_placeholder: "说点什么吧。"
-  comment_form_submit_button: "文章评论"
+    header: 历史修订
+    subheader: 版本
+    current: (当前的)
+    restore: (恢复这个版本)
+    applying_changes: (申请更改)
+    previous: 上一个
+    next: 下一个
+  comment_form_placeholder: 说点什么吧。
+  comment_form_submit_button: 文章评论
   liked_by: "喜欢%{who}"
-  delete_comment: "删掉评论"
-  confirm_delete_comment: "你确定你想要删掉这条评论吗？"
-  markdown_settings_more_info: "更多信息..."
-  delete_discussion: "删除讨论"
-  confirm_delete_discussion: "你确定你想要永久的删除这个讨论吗？"
-  new_proposal: "新提议"
-  close_proposal: "关闭的提议"
-  confirm_close_proposal: "你确定你想要关闭这个提议吗？"
-  change_proposal_close_date: "更改截止日期"
+  delete_comment: 删掉评论
+  confirm_delete_comment: 你确定你想要删掉这条评论吗？
+  markdown_settings_more_info: 更多信息...
+  delete_discussion: 删除讨论
+  confirm_delete_discussion: 你确定你想要永久的删除这个讨论吗？
+  new_proposal: 新提议
+  close_proposal: 关闭的提议
+  confirm_close_proposal: 你确定你想要关闭这个提议吗？
+  change_proposal_close_date: 更改截止日期
   change_proposal_close_date_header: "为这条建议更改关闭日期%{which}"
-  proposal_close_date_error: "请给一个未来的截止日期"
+  proposal_close_date_error: 请给一个未来的截止日期
   proposal_closing_when: "更在关闭%{when}"
   proposal_closed_when: "%{when}之前就已经关闭了"
-  state_your_position: "陈述你的位置"
-  positions: "位置"
-  yes_position: "我同意"
-  yes_details: "我同意这一点并且希望它可以继续下去"
-  abstain_position: "我弃权。"
-  abstain_details: "我很开心我不在时集团所做的决定。"
-  no_position: "我不同意"
-  no_details: "我认为我们可以做的更好。"
-  block_position: "我反对"
-  block_details: "我强烈反对这个提议并且我不希望它继续下去"
+  state_your_position: 陈述你的位置
+  positions: 位置
+  yes_position: 我同意
+  yes_details: 我同意这一点并且希望它可以继续下去
+  abstain_position: 我弃权。
+  abstain_details: 我很开心我不在时集团所做的决定。
+  no_position: 我不同意
+  no_details: 我认为我们可以做的更好。
+  block_position: 我反对
+  block_details: 我强烈反对这个提议并且我不希望它继续下去
   not_voted: "[成员显示尚未决定]"
-  outcome_placeholder: "这个建议的结果是什么"
+  outcome_placeholder: 这个建议的结果是什么
   help:
-    get_in_touch: "联系我们"
-    getting_started: "开始吧"
-    getting_started_description: "在左手边你的团体能讨论一个题目，交换主义以及咨询。当你的团体要做决定的时候，就会在右手边出现。"
-    have_a_discussion: "讨论吧"
-    how_it_works: "怎么使用？"
-    join_the_community: "加入社会"
-    make_a_decision: "做决定"
+    get_in_touch: 联系我们
+    getting_started: 开始吧
+    getting_started_description: 在左手边你的团体能讨论一个题目，交换主义以及咨询。当你的团体要做决定的时候，就会在右手边出现。
+    have_a_discussion: 讨论吧
+    how_it_works: 怎么使用？
+    join_the_community: 加入社会
+    make_a_decision: 做决定
     positions_agree_description: "<span>同意</span>意思就是满意提议的内容"
-    start_proposal: "写一个很清晰的提议"
+    start_proposal: 写一个很清晰的提议
     video_id: "52025402"
-    video_tutorial: "视频教育"
-    video_tutorial_description: "看看使用Loomio的示范视频"
+    video_tutorial: 视频教育
+    video_tutorial_description: 看看使用Loomio的示范视频
   hint:
-    vote: '任何时候你都可以更改位置'
-  resend_confirmation: "重新发送确认指令"
-  new_password: "新的密码"
-  confirm_new_password: "确认新密码"
-  change_your_password: "改你的密码"
-  change_my_password: "改我的密码"
-  send_password_reset: "给我重置密码的指令"
-  blank_details: "(如果你不想更改那就留空格)"
-  password_confirmation: "确定密码"
-  current_password: "当前密码"
-  password_details: "(我们需要你当前密码来确认密码更改)"
-  cancel_my_account: "取消我的账户"
-  remember_me: "记住我"
-  signing_in: "签署"
-  forgot_your_password: "忘记密码？"
-  confirmation_not_received: "没有收到确认指令吗？"
-  unlock_not_received: "没有收到解锁指令吗？"
+    vote: 任何时候你都可以更改位置
+  resend_confirmation: 重新发送确认指令
+  new_password: 新的密码
+  confirm_new_password: 确认新密码
+  change_your_password: 改你的密码
+  change_my_password: 改我的密码
+  send_password_reset: 给我重置密码的指令
+  blank_details: (如果你不想更改那就留空格)
+  password_confirmation: 确定密码
+  current_password: 当前密码
+  password_details: (我们需要你当前密码来确认密码更改)
+  cancel_my_account: 取消我的账户
+  remember_me: 记住我
+  signing_in: 签署
+  forgot_your_password: 忘记密码？
+  confirmation_not_received: 没有收到确认指令吗？
+  unlock_not_received: 没有收到解锁指令吗？
   invitation:
-    message_body: "邀请信息"
-    invitation_link: "邀请链接"
-    copy: "如果有些人没有得到他们的邀请邮件，请自觉的复制这上面的邀请链接并且发送给他们"
+    message_body: 邀请信息
+    invitation_link: 邀请链接
+    copy: 如果有些人没有得到他们的邀请邮件，请自觉的复制这上面的邀请链接并且发送给他们
   motion_form:
-    name_helper: "尽可能让这个标题清晰和简洁"
+    name_helper: 尽可能让这个标题清晰和简洁
   vote_form:
-    header: "陈述你的位置"
-    edit: "编辑你的位置"
-    placeholder: "提供你做这个决定的原因(可选)"
-    your_position: "你的位置"
-    your_statement: "你的说法"
-    submit: "提交位置"
-    update: "位置更新"
+    header: 陈述你的位置
+    edit: 编辑你的位置
+    placeholder: 提供你做这个决定的原因(可选)
+    your_position: 你的位置
+    your_statement: 你的说法
+    submit: 提交位置
+    update: 位置更新
   new_user_form:
-    create_an_account: "创建一个账户"
+    create_an_account: 创建一个账户
   group_setup:
-    submit: "把我放到我的组里"
+    submit: 把我放到我的组里
     payment_model:
       header: 每个人都可以用Loomio
       link: 找出更多
   simple_form:
-    'yes': '是的'
-    'no': '不是'
+    "yes": 是的
+    "no": 不是
     required:
-      mark: '＊'
+      mark: ＊
     labels:
       discussion:
-        title: "标题"
-        description: "上下文"
+        title: 标题
+        description: 上下文
       motion:
-        name: "标题"
-        description: "细节"
+        name: 标题
+        description: 细节
       user:
-        name: "性名"
-        email: "邮件"
-        password: "密码"
-        language_preference: "语言"
+        name: 性名
+        email: 邮件
+        password: 密码
+        language_preference: 语言
     placeholders:
       motion:
-        name: "你提议的目的是什么"
-        description: "请给足信息，这样每个人同意或不同意的时候就会知道它到底是什么意思"
+        name: 你提议的目的是什么
+        description: 请给足信息，这样每个人同意或不同意的时候就会知道它到底是什么意思
       user:
-        email: "邮件"
-        password: "密码"
+        email: 邮件
+        password: 密码
   helpers:
     submit:
       discussion:
-        create: "开始讨论"
-        update: "更新讨论"
+        create: 开始讨论
+        update: 更新讨论
       motion:
-        create: "开始提议"
+        create: 开始提议
       user:
-        create: "创建账户"
-        update: "更新设置"
+        create: 创建账户
+        update: 更新设置
   email:
-    view_comment: "点击这里查看Loomio的评论"
-    view_discussion: "点击这里查看讨论"
-    view_group: "点击这里查看Loomio的组队"
+    view_comment: 点击这里查看Loomio的评论
+    view_discussion: 点击这里查看讨论
+    view_group: 点击这里查看Loomio的组队
     create_proposal:
-      closes_in: "将要关闭"
+      closes_in: 将要关闭
     daily_activity:
-      intro: "展示上一个24小时你的Loomio所发生的事情"
+      intro: 展示上一个24小时你的Loomio所发生的事情
     invitation:
       hi: "您好%{name}"
     proposal_closing_soon:
-      closes_in: "将要关闭"
-      summary: "总结"
+      closes_in: 将要关闭
+      summary: 总结
     verification:
-      header: "你快要完成了"
-      ignore: "如果你不想请求加入Loomio请忽略这封邮件"
-  approve: "批准"
-  back: "返回"
-  cancel: "取消"
-  change: "更改"
-  changing: "更改中"
-  click_here: "点击这里"
-  close: "关闭"
-  closing: "关闭中"
-  closed: "关闭了"
-  decisions: "决定"
-  delete: "删除"
-  discussions: "讨论"
-  edit: "编辑"
-  email_address: "邮件地址"
-  enable: "启用"
-  participation: "参与"
-  disable: "不可能"
-  group: "组"
-  home: "主页"
-  id: "ID"
-  like: "喜欢"
-  loading: "稍等..."
-  message: "信息"
-  name: "名字"
-  new_activity: "新活动"
-  next: "下一个"
-  other: "其他的"
-  outcome: "结果"
-  password: "密码"
-  prev: "上一个"
-  options: "选项"
-  ok_got_it: "好了，我明白！"
-  save: "保存"
-  saving: "存档中"
-  sending: "发送中"
-  send_invite: "发送邀请"
-  send_email: "发邮件"
-  show_more: "展示更多"
-  starting: "正在开始"
-  subject: "标题"
-  thanks: "谢谢您！"
-  unlike: "不喜欢"
-  update: "更新"
+      header: 你快要完成了
+      ignore: 如果你不想请求加入Loomio请忽略这封邮件
+  approve: 批准
+  back: 返回
+  cancel: 取消
+  change: 更改
+  changing: 更改中
+  click_here: 点击这里
+  close: 关闭
+  closing: 关闭中
+  closed: 关闭了
+  decisions: 决定
+  delete: 删除
+  discussions: 讨论
+  edit: 编辑
+  email_address: 邮件地址
+  enable: 启用
+  participation: 参与
+  disable: 不可能
+  group: 组
+  home: 主页
+  id: ID
+  like: 喜欢
+  loading: 稍等...
+  message: 信息
+  name: 名字
+  new_activity: 新活动
+  next: 下一个
+  other: 其他的
+  outcome: 结果
+  password: 密码
+  prev: 上一个
+  options: 选项
+  ok_got_it: 好了，我明白！
+  save: 保存
+  saving: 存档中
+  sending: 发送中
+  send_invite: 发送邀请
+  send_email: 发邮件
+  show_more: 展示更多
+  starting: 正在开始
+  subject: 标题
+  thanks: 谢谢您！
+  unlike: 不喜欢
+  update: 更新
   common:
-    email: "邮件"
+    email: 邮件
