--- a/config/locales/frontpage.bg-BG.yml
+++ b/config/locales/frontpage.bg-BG.yml
@@ -1,13 +1,13 @@
 bg-BG:
   frontpage:
-    view_this_in_your_language: 'Разглеждайте този сайт на %{language}'
+    view_this_in_your_language: "Разглеждайте този сайт на %{language}"
     title:
       collaborative_decision_making: Съвместно вземане на решения
     link:
-      try_it: 'Опитай'
-      log_in: 'ВЛЕЗ'
-      video: "Научи повече за това как Loomio работи"
-      top: 'Най-горе'
+      try_it: Опитай
+      log_in: ВЛЕЗ
+      video: Научи повече за това как Loomio работи
+      top: Най-горе
     hero:
-      head_html: 'Светът се нуждае от по-добър начин да <strong> взема решения заедно </strong>'
-      desc_html: 'Loomio е безплатен софтуер с <a href="https://github.com/loomio/loomio">отворен код</a>, за ползване навсякъде и от всеки, който желае да участва във взимането на решения, които го касаят.'
+      head_html: "Светът се нуждае от по-добър начин да <strong> взема решения заедно </strong>"
+      desc_html: "Loomio е безплатен софтуер с <a href=\"https://github.com/loomio/loomio\">отворен код</a>, за ползване навсякъде и от всеки, който желае да участва във взимането на решения, които го касаят."
