--- a/config/locales/frontpage.cs.yml
+++ b/config/locales/frontpage.cs.yml
@@ -1,64 +1,64 @@
 cs:
   frontpage:
-    view_this_in_your_language: 'Zobrazit stránku v %{language}'
+    view_this_in_your_language: "Zobrazit stránku v %{language}"
     title:
       collaborative_decision_making: Společné rozhodování
     link:
-      blog: 'Blog'
-      contact: 'Kontakt'
-      donate: 'Přispějte ještě dnes'
-      press: 'Tisk'
-      try_it: 'Vyzkoušejte to'
-      log_in: 'PŘIHLÁSIT SE'
+      blog: Blog
+      contact: Kontakt
+      donate: Přispějte ještě dnes
+      press: Tisk
+      try_it: Vyzkoušejte to
+      log_in: PŘIHLÁSIT SE
       video: "Více o tom, jak Loomio funguje"
-      try_loomio_beta: 'Vyzkoušejte Loomio beta'
-      check_out_loomio_beta: 'Podívejte se na Loomio beta'
-      more: 'Více'
-      top: 'Začátek'
-      public_groups: 'Veřejné skupiny'
-      terms: 'Podmínky'
-      privacy: 'Soukromí'
-      services: 'Služby'
+      try_loomio_beta: Vyzkoušejte Loomio beta
+      check_out_loomio_beta: Podívejte se na Loomio beta
+      more: Více
+      top: Začátek
+      public_groups: Veřejné skupiny
+      terms: Podmínky
+      privacy: Soukromí
+      services: Služby
     hero:
-      head_html: 'Svět potřebuje lepší způsob, jak <strong>společně rozhodovat</strong>.'
-      desc_html: 'Loomio je svobodný,  <a href="https://github.com/loomio/loomio">open source</a> software umožňující každému a kdekoliv, aby se podílel na rozhodnutích, které se ho týkají.'
+      head_html: "Svět potřebuje lepší způsob, jak <strong>společně rozhodovat</strong>."
+      desc_html: "Loomio je svobodný,  <a href=\"https://github.com/loomio/loomio\">open source</a> software umožňující každému a kdekoliv, aby se podílel na rozhodnutích, které se ho týkají."
     product:
-      header_html: 'Když vyslechneme <strong>všechny hlasy</strong>, činíme <strong>lepší rozhodnutí</strong>.'
+      header_html: "Když vyslechneme <strong>všechny hlasy</strong>, činíme <strong>lepší rozhodnutí</strong>."
       step1:
-        header: '1. Důkladně to prodiskutujte'
-        desc: 'Zahajte diskuzi na jakékoliv téma a pozvěte správné lidí. Sdílejte různé perspektivy a společně rozvíjejte nápady.'
+        header: 1. Důkladně to prodiskutujte
+        desc: Zahajte diskuzi na jakékoliv téma a pozvěte správné lidí. Sdílejte různé perspektivy a společně rozvíjejte nápady.
       step2:
-        header: '2. Dosáhněte dohody'
-        desc: 'Každý může navrhnout řešení. Lidé mohou souhlasit, zdržet se, nesouhlasit, či ho zamítnout – abyste věděli, jaký má každý názor a proč.'
+        header: 2. Dosáhněte dohody
+        desc: "Každý může navrhnout řešení. Lidé mohou souhlasit, zdržet se, nesouhlasit, či ho zamítnout – abyste věděli, jaký má každý názor a proč."
       step3:
-        header: '3. Rozhodněte se společně'
-        desc: 'Vypracujte návrh společně, aby vyhovoval všem. Každé rozhodnutí má jasnou lhůtu, takže vždy získáte jasné rozhodnutí.'
+        header: 3. Rozhodněte se společně
+        desc: "Vypracujte návrh společně, aby vyhovoval všem. Každé rozhodnutí má jasnou lhůtu, takže vždy získáte jasné rozhodnutí."
     crowdfunding:
-      header: 'Crowdfundujeme, abychom mohli dobudovat tuto novou platformu a poskytnout ji světu.'
+      header: "Crowdfundujeme, abychom mohli dobudovat tuto novou platformu a poskytnout ji světu."
     prototype:
       header_html: "Již jsme postavili prototyp, a lidé na celém světě s ním dělají úžasné věci"
-      subhead_html: '<a href="%{try_loomio_link}">Vyzkoušejte Loomio Beta</a> hned. Můžete také <a href="%{donate_link}">podpořit projekt finančně</a> a pomoci tak při tvorbě Loomio verze 1.0'
+      subhead_html: "<a href=\"%{try_loomio_link}\">Vyzkoušejte Loomio Beta</a> hned. Můžete také <a href=\"%{donate_link}\">podpořit projekt finančně</a> a pomoci tak při tvorbě Loomio verze 1.0"
     mobile:
-      header_html: 'Loomio 1.0 bude fungovat na libovolném zařízení, je vytvářený pomocí nejlepší <strong> otevřené mobilní technologie.</strong>'
+      header_html: "Loomio 1.0 bude fungovat na libovolném zařízení, je vytvářený pomocí nejlepší <strong> otevřené mobilní technologie.</strong>"
     quote:
       header:
-        rushkoff_html: '“Loomio <strong> využívá naplno potenciál internetu</strong>, místo polarizování debaty se snaží spíše přivést lidi ke konsenzu.”<div class="attributation">– <a href="http://rushkoff.com">Douglas Rushkoff</a>, author of <em>Present Shock</em></div>'
-        sifry_html: '“Loomio nabízí rovnováhu mezi <strong>hlasem jednotlivce</strong> a <strong>kolektivním rozhodnutím</strong>.”<div class="attributation">– Micah Sifry, Editor, <em><a href="http://techpresident.com">TechPresident</a></em></div>'
+        rushkoff_html: "“Loomio <strong> využívá naplno potenciál internetu</strong>, místo polarizování debaty se snaží spíše přivést lidi ke konsenzu.”<div class=\"attributation\">– <a href=\"http://rushkoff.com\">Douglas Rushkoff</a>, author of <em>Present Shock</em></div>"
+        sifry_html: "“Loomio nabízí rovnováhu mezi <strong>hlasem jednotlivce</strong> a <strong>kolektivním rozhodnutím</strong>.”<div class=\"attributation\">– Micah Sifry, Editor, <em><a href=\"http://techpresident.com\">TechPresident</a></em></div>"
     team:
-      header: 'O Loomiu'
-      desc: 'Jsme malý tým open-source vývojářů a aktivistů za sociální spravedlnost pracující pro Enspiral v Aotearoa Novém Zélandu, se širší sítí přátel, příznivců a poradců po celém světě.'
+      header: O Loomiu
+      desc: "Jsme malý tým open-source vývojářů a aktivistů za sociální spravedlnost pracující pro Enspiral v Aotearoa Novém Zélandu, se širší sítí přátel, příznivců a poradců po celém světě."
     ideals:
       community:
-        header: 'Komunitně řízené družstvo'
-        desc: 'Loomio je budováno družstvem vlastněným pracovníky. Jsme sociálním podnikem, co se snaží maximalizovat pozitivní sociální dopad, ne zisk.'
+        header: Komunitně řízené družstvo
+        desc: "Loomio je budováno družstvem vlastněným pracovníky. Jsme sociálním podnikem, co se snaží maximalizovat pozitivní sociální dopad, ne zisk."
       independent:
-        header: 'Nezávislé a neutrální'
-        desc: 'Udružujeme prostor, kde se každá skupina může spojit, nezávisle na politickém či firemním zájmu. Nikdy neprodáme vaše údaje.'
+        header: Nezávislé a neutrální
+        desc: "Udružujeme prostor, kde se každá skupina může spojit, nezávisle na politickém či firemním zájmu. Nikdy neprodáme vaše údaje."
       open:
-        header: 'Svobodný a otevřený software'
-        desc: 'Kód Loomia je veřějným zdrojem, který každý může spouštět, číst, učit se z, upravovat a dále distribuovat.'
+        header: Svobodný a otevřený software
+        desc: "Kód Loomia je veřějným zdrojem, který každý může spouštět, číst, učit se z, upravovat a dále distribuovat."
       gift:
-        header: 'Ekonomika darů'
-        desc: 'Loomio je podporován lidmi, kteří platí podle svých možností. To udržuje platformu bez reklam a přístuptupnou skupinám bez peněz.'
+        header: Ekonomika darů
+        desc: "Loomio je podporován lidmi, kteří platí podle svých možností. To udržuje platformu bez reklam a přístuptupnou skupinám bez peněz."
     vision:
-      header: 'Pomozte nám zrealizovat tuto vizi.'
+      header: Pomozte nám zrealizovat tuto vizi.
