--- a/config/locales/frontpage.da.yml
+++ b/config/locales/frontpage.da.yml
@@ -1,64 +1,64 @@
 da:
   frontpage:
-    view_this_in_your_language: 'Se siden på %{language}'
+    view_this_in_your_language: "Se siden på %{language}"
     title:
       collaborative_decision_making: Fælles beslutningstagning
     link:
-      blog: 'Blog'
-      contact: 'Kontakt os'
-      donate: 'Donér nu'
-      press: 'Presse'
-      try_it: 'Prøv det'
-      log_in: 'LOG IND'
+      blog: Blog
+      contact: Kontakt os
+      donate: Donér nu
+      press: Presse
+      try_it: Prøv det
+      log_in: LOG IND
       video: "Se mere om, hvordan Loomio fungerer"
-      try_loomio_beta: 'Prøv beta-versionen af Loomio'
-      check_out_loomio_beta: 'Tjek lige Loomio beta'
-      more: 'Mere'
-      top: 'Toppen af siden.'
-      public_groups: 'Offentlige grupper'
-      terms: 'Betingelser'
-      privacy: 'Personoplysninger'
-      services: 'Faciliteter'
+      try_loomio_beta: Prøv beta-versionen af Loomio
+      check_out_loomio_beta: Tjek lige Loomio beta
+      more: Mere
+      top: Toppen af siden.
+      public_groups: Offentlige grupper
+      terms: Betingelser
+      privacy: Personoplysninger
+      services: Faciliteter
     hero:
-      head_html: 'Verdenen behøver en bedre måde at <strong>lave fælles beslutninger</strong>.'
-      desc_html: 'Loomio er fri og <a href="https://github.com/loomio/loomio">open source</a> software så alle, uanset hvor de er, kan være med til at tage beslutninger der påvirker dem.'
+      head_html: "Verdenen behøver en bedre måde at <strong>lave fælles beslutninger</strong>."
+      desc_html: "Loomio er fri og <a href=\"https://github.com/loomio/loomio\">open source</a> software så alle, uanset hvor de er, kan være med til at tage beslutninger der påvirker dem."
     product:
-      header_html: 'Når vi hører <strong>alle stemmer</strong>, så opnår vi <strong>bedre beslutninger</strong>.'
+      header_html: "Når vi hører <strong>alle stemmer</strong>, så opnår vi <strong>bedre beslutninger</strong>."
       step1:
-        header: '1. Tal tingene igennem.'
-        desc: 'Påbegynd en diskusion om et emne og inkluder de rigtige personer. Del perspektiver og udvikl  idéer sammen.'
+        header: 1. Tal tingene igennem.
+        desc: Påbegynd en diskusion om et emne og inkluder de rigtige personer. Del perspektiver og udvikl  idéer sammen.
       step2:
-        header: '2. Nå til enighed'
-        desc: 'Enhver kan foreslå en handling. Deltagere kan være enige, stemme blankt, være uenige eller blokere foreslaget. Dermed kan man se, hvad alle mener og hvorfor.'
+        header: 2. Nå til enighed
+        desc: "Enhver kan foreslå en handling. Deltagere kan være enige, stemme blankt, være uenige eller blokere foreslaget. Dermed kan man se, hvad alle mener og hvorfor."
       step3:
-        header: '3. Beslut sammen'
-        desc: 'Udvikl forslaget sammen så  alle kan acceptere det. Alle forslag har en tydelig deadline, hvorfor du altid får et tideligt resultat.'
+        header: 3. Beslut sammen
+        desc: "Udvikl forslaget sammen så  alle kan acceptere det. Alle forslag har en tydelig deadline, hvorfor du altid får et tideligt resultat."
     crowdfunding:
-      header: 'Vi er crowdfunded. Det betyder, at vi kan færdigbygge denne nye softwareplatform og give den til verdenen.'
+      header: "Vi er crowdfunded. Det betyder, at vi kan færdigbygge denne nye softwareplatform og give den til verdenen."
     prototype:
-      header_html: "We har allerede lavet en prototype og der er folk over hele verden der laver fantastiske ting med den"
-      subhead_html: '<a href="%{try_loomio_link}">Prøv Loomio Beta</a> nu. Du kan også <a href="%{donate_link}">støtte projektet</a> og være med til at finansiere Loomio 1.0'
+      header_html: We har allerede lavet en prototype og der er folk over hele verden der laver fantastiske ting med den
+      subhead_html: "<a href=\"%{try_loomio_link}\">Prøv Loomio Beta</a> nu. Du kan også <a href=\"%{donate_link}\">støtte projektet</a> og være med til at finansiere Loomio 1.0"
     mobile:
-      header_html: 'Loomio 1.0 vil fungere på alle enheder og bliver bygget med brug af det bedste indenfor <strong>åben mobilteknologi.</strong>'
+      header_html: "Loomio 1.0 vil fungere på alle enheder og bliver bygget med brug af det bedste indenfor <strong>åben mobilteknologi.</strong>"
     quote:
       header:
-        rushkoff_html: '"Loomio <strong>frigører internettets potentiale</strong> for at opnå konsensus mellem mennesker frem for at polarisere debatten."<div class="attributation">– <a href="http://rushkoff.com">Douglas Rushkoff</a>, forfatter af <em>Present Shock</em></div>'
-        sifry_html: '"Loomio ligger i smørhullet mellem <strong>individuelt udtryk</strong> og <strong>fælles beslutning</strong>."<div class="attributation">– Micah Sifry, Editor, <em><a href="http://techpresident.com">TechPresident</a></em></div>'
+        rushkoff_html: "\"Loomio <strong>frigører internettets potentiale</strong> for at opnå konsensus mellem mennesker frem for at polarisere debatten.\"<div class=\"attributation\">– <a href=\"http://rushkoff.com\">Douglas Rushkoff</a>, forfatter af <em>Present Shock</em></div>"
+        sifry_html: "\"Loomio ligger i smørhullet mellem <strong>individuelt udtryk</strong> og <strong>fælles beslutning</strong>.\"<div class=\"attributation\">– Micah Sifry, Editor, <em><a href=\"http://techpresident.com\">TechPresident</a></em></div>"
     team:
-      header: 'Om Loomio'
-      desc: 'Vi er et lille hold bestående af open-source udviklere og social retfærdighedsaktivister, der arbejder hos Enspiral i Aotearoa i New Zealand, sammen med et bredt netværk af venner, støtter og rådgivere fra hele verdenen.'
+      header: Om Loomio
+      desc: "Vi er et lille hold bestående af open-source udviklere og social retfærdighedsaktivister, der arbejder hos Enspiral i Aotearoa i New Zealand, sammen med et bredt netværk af venner, støtter og rådgivere fra hele verdenen."
     ideals:
       community:
-        header: 'Samarbejde drevet af fællesskabet'
-        desc: 'Loomio er opbygget af et arbejderejet kooperativ. Vi er et socialt foretagende, der arbejder for at maksimere positiv social indvirkning frem for profit.'
+        header: Samarbejde drevet af fællesskabet
+        desc: "Loomio er opbygget af et arbejderejet kooperativ. Vi er et socialt foretagende, der arbejder for at maksimere positiv social indvirkning frem for profit."
       independent:
-        header: 'Uafhængig og neutral'
-        desc: 'Vi tilbyder et forum for enhver gruppe, der er uafhængigt af både politiske interesser og virksomhedsinteresser. Vi vil aldrig sælge dine data.'
+        header: Uafhængig og neutral
+        desc: "Vi tilbyder et forum for enhver gruppe, der er uafhængigt af både politiske interesser og virksomhedsinteresser. Vi vil aldrig sælge dine data."
       open:
-        header: 'Gratis og åbent software'
-        desc: 'Loomios kodebase er en offentlig ressource som alle kan køre, læse, lære fra, ændre og redistribuere.'
+        header: Gratis og åbent software
+        desc: "Loomios kodebase er en offentlig ressource som alle kan køre, læse, lære fra, ændre og redistribuere."
       gift:
-        header: 'Gaveøkonomi'
-        desc: 'Loomio er finansieret af dem, der betaler efter evne. Det betyder at platformen kan være fri for reklamer og tilgængelig for grupper uden penge.'
+        header: Gaveøkonomi
+        desc: "Loomio er finansieret af dem, der betaler efter evne. Det betyder at platformen kan være fri for reklamer og tilgængelig for grupper uden penge."
     vision:
-      header: 'Hjælp os med at gøre denne vision til virkelighed.'
+      header: Hjælp os med at gøre denne vision til virkelighed.
