--- a/config/locales/frontpage.eo.yml
+++ b/config/locales/frontpage.eo.yml
@@ -1,64 +1,64 @@
 eo:
   frontpage:
-    view_this_in_your_language: 'Vidi ĉi tiun retejon en %{language}'
+    view_this_in_your_language: "Vidi ĉi tiun retejon en %{language}"
     title:
       collaborative_decision_making: Kunlabora decidado
     link:
-      blog: 'Blogo'
-      contact: 'Kontakto'
-      donate: 'Donacu jam'
-      press: 'Gazetaro'
-      try_it: 'Provu ĝin'
-      log_in: 'ENSALUTI'
-      video: "Vidi pli pri la funkciado de Loomio"
-      try_loomio_beta: 'Elprovi Loomion beta'
-      check_out_loomio_beta: 'Eksperimenti Loomion beta'
-      more: 'Pli'
-      top: 'Supren'
-      public_groups: 'Publikaj grupoj'
-      terms: 'Kondiĉoj'
-      privacy: 'Privateco'
-      services: 'Servoj'
+      blog: Blogo
+      contact: Kontakto
+      donate: Donacu jam
+      press: Gazetaro
+      try_it: Provu ĝin
+      log_in: ENSALUTI
+      video: Vidi pli pri la funkciado de Loomio
+      try_loomio_beta: Elprovi Loomion beta
+      check_out_loomio_beta: Eksperimenti Loomion beta
+      more: Pli
+      top: Supren
+      public_groups: Publikaj grupoj
+      terms: Kondiĉoj
+      privacy: Privateco
+      services: Servoj
     hero:
-      head_html: 'La mondo bezonas pli bonan manieron <strong>kune decidadi</strong>.'
-      desc_html: 'Loomio estas senpaga kaj <a href="https://github.com/loomio/loomio">libera</a> programaro por kiu ajn, kie ajn, por partopreni en decidoj rilataj al ili.'
+      head_html: "La mondo bezonas pli bonan manieron <strong>kune decidadi</strong>."
+      desc_html: "Loomio estas senpaga kaj <a href=\"https://github.com/loomio/loomio\">libera</a> programaro por kiu ajn, kie ajn, por partopreni en decidoj rilataj al ili."
     product:
-      header_html: 'Aŭdante <strong>ĉies voĉon</strong>, ni faras <strong>pli bonajn decidojn</strong>.'
+      header_html: "Aŭdante <strong>ĉies voĉon</strong>, ni faras <strong>pli bonajn decidojn</strong>."
       step1:
-        header: '1. Paroli pri la aferoj'
-        desc: 'Komencu diskuton pri ajna temo, kaj enigu la ĝustajn personojn. Kunhavigu diversajn vidpunktojn kaj kune disvolvu ideojn.'
+        header: 1. Paroli pri la aferoj
+        desc: "Komencu diskuton pri ajna temo, kaj enigu la ĝustajn personojn. Kunhavigu diversajn vidpunktojn kaj kune disvolvu ideojn."
       step2:
-        header: '2. Krei konsenton'
-        desc: 'Ĉiuj povas proponi kiel fari. Homoj povas konsenti, sin deteni, malkonsenti aŭ bloki – tiel vi povas vidi kiel ĉiuj sin sentas, kaj kial.'
+        header: 2. Krei konsenton
+        desc: "Ĉiuj povas proponi kiel fari. Homoj povas konsenti, sin deteni, malkonsenti aŭ bloki – tiel vi povas vidi kiel ĉiuj sin sentas, kaj kial."
       step3:
-        header: '3. Decidi kune'
-        desc: 'Disvolvu la proponon kune por ke ĝi funkciu por ĉiuj. Ĉiu decido havas klaran limdaton, do vi ĉiam havas klaran rezulton.'
+        header: 3. Decidi kune
+        desc: "Disvolvu la proponon kune por ke ĝi funkciu por ĉiuj. Ĉiu decido havas klaran limdaton, do vi ĉiam havas klaran rezulton."
     crowdfunding:
-      header: 'Ni kolektas monon por ke ni povu fini la konstruadon de ĉi tiu nova platformo kaj fordoni ĝin al la mondo.'
+      header: Ni kolektas monon por ke ni povu fini la konstruadon de ĉi tiu nova platformo kaj fordoni ĝin al la mondo.
     prototype:
       header_html: "Ni jam havas prototipon, kaj homoj tra la tuta mondo faras mirigajn aferojn per ĝi"
-      subhead_html: '<a href="%{try_loomio_link}">Provu Loomion Beta</a> nun. Vi ankaŭ povas <a href="%{donate_link}">subteni la projekton</a> por helpi fundi Loomion 1.0'
+      subhead_html: "<a href=\"%{try_loomio_link}\">Provu Loomion Beta</a> nun. Vi ankaŭ povas <a href=\"%{donate_link}\">subteni la projekton</a> por helpi fundi Loomion 1.0"
     mobile:
-      header_html: 'Loomio 1.0 funkcios en ajna aparato, konstruita per la plejbono en <strong>malferma poŝteĥnologio.</strong>'
+      header_html: "Loomio 1.0 funkcios en ajna aparato, konstruita per la plejbono en <strong>malferma poŝteĥnologio.</strong>"
     quote:
       header:
-        rushkoff_html: '"Loomio <strong>liberigas la povon de la interreto</strong> por kunsentigi homojn anstataŭ polusigi debaton."<div class="attributation">– <a href="http://rushkoff.com">Douglas Rushkoff</a>, aŭtoro de <em>Present Shock</em></div>'
-        sifry_html: '"Loomio atingas la dolĉan mezon inter <strong>unuopa voĉo</strong> kaj <strong>multopa decido</strong>."<div class="attributation">– Micah Sifry, redaktisto de <em><a href="http://techpresident.com">TechPresident</a></em></div>'
+        rushkoff_html: "\"Loomio <strong>liberigas la povon de la interreto</strong> por kunsentigi homojn anstataŭ polusigi debaton.\"<div class=\"attributation\">– <a href=\"http://rushkoff.com\">Douglas Rushkoff</a>, aŭtoro de <em>Present Shock</em></div>"
+        sifry_html: "\"Loomio atingas la dolĉan mezon inter <strong>unuopa voĉo</strong> kaj <strong>multopa decido</strong>.\"<div class=\"attributation\">– Micah Sifry, redaktisto de <em><a href=\"http://techpresident.com\">TechPresident</a></em></div>"
     team:
-      header: 'Pri Loomio'
-      desc: 'Ni estas malgranda teamo de liberprogramaraj programistoj kaj socijustecaj aktivuloj kiuj laboras ĉe Enspiral en Aotearoo/Novzelando, kun plilarĝa reto da amikoj, subtenantoj kaj konsilantoj en la tuta mondo.'
+      header: Pri Loomio
+      desc: "Ni estas malgranda teamo de liberprogramaraj programistoj kaj socijustecaj aktivuloj kiuj laboras ĉe Enspiral en Aotearoo/Novzelando, kun plilarĝa reto da amikoj, subtenantoj kaj konsilantoj en la tuta mondo."
     ideals:
       community:
-        header: 'Komunumpelata kooperativo'
-        desc: 'Loomio estas konstruata de laborist-posedata kooperativo. Ni estas socia entrepreno kiu laboras por maksimumigi socian impakton, ne profiton.'
+        header: Komunumpelata kooperativo
+        desc: "Loomio estas konstruata de laborist-posedata kooperativo. Ni estas socia entrepreno kiu laboras por maksimumigi socian impakton, ne profiton."
       independent:
-        header: 'Sendependa kaj neŭtrala'
-        desc: 'Ni mantenas spacon por la kunvenado de ajna grupo, sendepende de politika kaj kooperacia intereso. Ni neniam vendos viajn datumojn.'
+        header: Sendependa kaj neŭtrala
+        desc: "Ni mantenas spacon por la kunvenado de ajna grupo, sendepende de politika kaj kooperacia intereso. Ni neniam vendos viajn datumojn."
       open:
-        header: 'Libera programaro'
-        desc: 'La kodo de Loomio estas publika havaĵo kiun iu ajn povas ruligi, legi, pristudi, ŝanĝi kaj redisdoni.'
+        header: Libera programaro
+        desc: "La kodo de Loomio estas publika havaĵo kiun iu ajn povas ruligi, legi, pristudi, ŝanĝi kaj redisdoni."
       gift:
-        header: 'Donac-ekonomio'
-        desc: 'Loomio estas subtenata de tiuj kiuj pagas laŭ iliaj ebloj. Tio tenas la platformon senreklama kaj uzebla de grupoj sen mono.'
+        header: Donac-ekonomio
+        desc: Loomio estas subtenata de tiuj kiuj pagas laŭ iliaj ebloj. Tio tenas la platformon senreklama kaj uzebla de grupoj sen mono.
     vision:
-      header: 'Helpu nin realigi ĉi tiun vidon.'
+      header: Helpu nin realigi ĉi tiun vidon.
