--- a/config/locales/frontpage.he.yml
+++ b/config/locales/frontpage.he.yml
@@ -1,64 +1,64 @@
 he:
   frontpage:
-    view_this_in_your_language: 'צפייה באתר ב%{language}'
+    view_this_in_your_language: "צפייה באתר ב%{language}"
     title:
       collaborative_decision_making: קבלת החלטת שיתופית
     link:
-      blog: 'בלוג'
-      contact: 'יצירת קשר'
-      donate: 'תרמו היום'
-      press: 'לחצו'
-      try_it: 'נסו כעת'
-      log_in: 'התחברות'
-      video: "צפו כיצד Loomio פועל"
-      try_loomio_beta: 'קחו את Loomio לנסיעת מבחן'
-      check_out_loomio_beta: 'נסו את Loomio בטא'
-      more: 'עוד'
-      top: 'למעלה'
-      public_groups: 'קבוצות ציבוריות'
-      terms: 'תנאי שימוש'
-      privacy: 'פרטיות'
-      services: 'שירותים'
+      blog: בלוג
+      contact: יצירת קשר
+      donate: תרמו היום
+      press: לחצו
+      try_it: נסו כעת
+      log_in: התחברות
+      video: צפו כיצד Loomio פועל
+      try_loomio_beta: קחו את Loomio לנסיעת מבחן
+      check_out_loomio_beta: נסו את Loomio בטא
+      more: עוד
+      top: למעלה
+      public_groups: קבוצות ציבוריות
+      terms: תנאי שימוש
+      privacy: פרטיות
+      services: שירותים
     hero:
-      head_html: 'העולם זקוק לדרך טובה יותר <strong>לקבל החלטות ביחד</strong>.'
-      desc_html: 'Loomio הוא תוכנה חינמית <a href="https://github.com/loomio/loomio">מבוססת קוד פתוח</a> שנועדה לאפשר לכל אחד, בכל מקום, להשתתף בהחלטות שמשפיעות עליו או עליה'
+      head_html: "העולם זקוק לדרך טובה יותר <strong>לקבל החלטות ביחד</strong>."
+      desc_html: "Loomio הוא תוכנה חינמית <a href=\"https://github.com/loomio/loomio\">מבוססת קוד פתוח</a> שנועדה לאפשר לכל אחד, בכל מקום, להשתתף בהחלטות שמשפיעות עליו או עליה"
     product:
-      header_html: 'כשאנחנו שומעים <strong>את כל הקולות </strong>, אנחנו מקבלים <strong>החלטות טובות יותר</strong>.'
+      header_html: "כשאנחנו שומעים <strong>את כל הקולות </strong>, אנחנו מקבלים <strong>החלטות טובות יותר</strong>."
       step1:
-        header: '1. לדבר על הדברים'
-        desc: 'התחילו דיון בכל נושא והביאו את האנשים הנכונים. חלקו נקודות מבט שונות ופתחו רעיונות יחדיו'
+        header: 1. לדבר על הדברים
+        desc: התחילו דיון בכל נושא והביאו את האנשים הנכונים. חלקו נקודות מבט שונות ופתחו רעיונות יחדיו
       step2:
-        header: '2. לבנות הסכמה'
-        desc: 'כל אחד יכול להציע דרך פעולה. אנשים יכולים להסכים, להמנע, לפסול או לחסום - כך שאפשר לראות איך כולם מרגישים ולמה.'
+        header: 2. לבנות הסכמה
+        desc: "כל אחד יכול להציע דרך פעולה. אנשים יכולים להסכים, להמנע, לפסול או לחסום - כך שאפשר לראות איך כולם מרגישים ולמה."
       step3:
-        header: '3. להחליט יחדיו'
-        desc: 'פתחו את ההצעה יחדיו כך שתתאים לכולם. לכל החלטה יש זמן קצוב ומוגדר מראש כך שתמיד תקבלו תוצאה חד-משמעית'
+        header: 3. להחליט יחדיו
+        desc: פתחו את ההצעה יחדיו כך שתתאים לכולם. לכל החלטה יש זמן קצוב ומוגדר מראש כך שתמיד תקבלו תוצאה חד-משמעית
     crowdfunding:
-      header: 'אנחנו נעזרים במימון ציבורי על מנת לסיים לבנות את המערכת החדשה ולהעניק אותה לעולם'
+      header: אנחנו נעזרים במימון ציבורי על מנת לסיים לבנות את המערכת החדשה ולהעניק אותה לעולם
     prototype:
       header_html: "כבר בנינו אבטיפוס, ואנשים מכל רחבי העולם עושים דברים מדהימים איתו"
-      subhead_html: '<a href="%{try_loomio_link}">נסו את Loomio בטא</a> כעת. אתם יכולים גם <a href="%{donate_link}">לתמוך בפרוייקט</a> ולעזור במימון לומיו 1.0'
+      subhead_html: "<a href=\"%{try_loomio_link}\">נסו את Loomio בטא</a> כעת. אתם יכולים גם <a href=\"%{donate_link}\">לתמוך בפרוייקט</a> ולעזור במימון לומיו 1.0"
     mobile:
-      header_html: 'Loomio 1.0 יעבוד על כל מכשיר עם  <strong>טכלוגיית קוד פתוח לניידים</strong> הטובה ביותר'
+      header_html: "Loomio 1.0 יעבוד על כל מכשיר עם  <strong>טכלוגיית קוד פתוח לניידים</strong> הטובה ביותר"
     quote:
       header:
-        rushkoff_html: '“Loomio <strong>ממצה את את הפוטנציאל של האינטרנט </strong> להביא אנשים לידי קונצנזוס במקום לדיון מקוטב”<div class="attributation">– <a href="http://rushkoff.com">דאגלאס ראשקוף</a>, מחבר <em>Present Shock</em></div>'
-        sifry_html: '“Loomio פוגעת בדיוק במטרה בין <strong>הקול האינדיבידואלי</strong> ו<strong>החלטות שיתופיות </strong>.”<div class="attributation">– מיכה סיפרי, עורך, <em><a href="http://techpresident.com">TechPresident</a></em></div>'
+        rushkoff_html: "“Loomio <strong>ממצה את את הפוטנציאל של האינטרנט </strong> להביא אנשים לידי קונצנזוס במקום לדיון מקוטב”<div class=\"attributation\">– <a href=\"http://rushkoff.com\">דאגלאס ראשקוף</a>, מחבר <em>Present Shock</em></div>"
+        sifry_html: "“Loomio פוגעת בדיוק במטרה בין <strong>הקול האינדיבידואלי</strong> ו<strong>החלטות שיתופיות </strong>.”<div class=\"attributation\">– מיכה סיפרי, עורך, <em><a href=\"http://techpresident.com\">TechPresident</a></em></div>"
     team:
-      header: 'אודות Loomio'
-      desc: 'אנחנו צוות קטן של מפתחי קוד הפתוח ופעילים צדק חברתי הפועל בEnspiral בAotearoa שבניו זילנד, עם רשת רחבה יותר של חברים, תומכים ויועצים בכל רחבי העולם.'
+      header: אודות Loomio
+      desc: "אנחנו צוות קטן של מפתחי קוד הפתוח ופעילים צדק חברתי הפועל בEnspiral בAotearoa שבניו זילנד, עם רשת רחבה יותר של חברים, תומכים ויועצים בכל רחבי העולם."
     ideals:
       community:
-        header: 'התאגדות מבוססת קהילה'
-        desc: 'Loomio נבנה על-ידי התאגדות בבעלות-העובדים. אנחנו יוזמה חברתית שפועלת למקסם השפעה חברתית, לא רווח.'
+        header: התאגדות מבוססת קהילה
+        desc: "Loomio נבנה על-ידי התאגדות בבעלות-העובדים. אנחנו יוזמה חברתית שפועלת למקסם השפעה חברתית, לא רווח."
       independent:
-        header: 'עצמאי וניטראלי'
-        desc: 'אנחנו מספקים מקום חף מאינטרסים פוליטיים וכלכליים שייתן לכל קבוצה לבוא יחדיו. לעולם לא נמכור את המידע שלך.'
+        header: עצמאי וניטראלי
+        desc: אנחנו מספקים מקום חף מאינטרסים פוליטיים וכלכליים שייתן לכל קבוצה לבוא יחדיו. לעולם לא נמכור את המידע שלך.
       open:
-        header: 'תוכנה פתוחה וחינמית'
-        desc: 'הקוד של Loomio הוא משאב ציבורי שכל אחד יכול להריץ, לקרוא וללמוד ממנו, לשנותו ולשווקו מחדש.'
+        header: תוכנה פתוחה וחינמית
+        desc: "הקוד של Loomio הוא משאב ציבורי שכל אחד יכול להריץ, לקרוא וללמוד ממנו, לשנותו ולשווקו מחדש."
       gift:
-        header: 'כלכלת מתנות'
-        desc: 'Loomio נתמכת על ידי אלו שידם משגת ובכך אנחנו שומרים על המערכת נקייה מפרסומות וזמינה לכל הקבוצות ללא עלות'
+        header: כלכלת מתנות
+        desc: Loomio נתמכת על ידי אלו שידם משגת ובכך אנחנו שומרים על המערכת נקייה מפרסומות וזמינה לכל הקבוצות ללא עלות
     vision:
-      header: 'עזרו לנו להפוך חזון זה למציאות'
+      header: עזרו לנו להפוך חזון זה למציאות
