--- a/config/locales/frontpage.pt-BR.yml
+++ b/config/locales/frontpage.pt-BR.yml
@@ -1,64 +1,64 @@
 pt-BR:
   frontpage:
-    view_this_in_your_language: 'Ver este site em %{language}'
+    view_this_in_your_language: "Ver este site em %{language}"
     title:
       collaborative_decision_making: Tomada de decisão colaborativa
     link:
-      blog: 'Blog'
-      contact: 'Contato'
-      donate: 'Doe hoje'
-      press: 'Imprensa'
-      try_it: 'Experimente'
-      log_in: 'Entrar'
-      video: "Saiba mais sobre como Loomio funciona"
-      try_loomio_beta: 'Experimente Loomio beta'
-      check_out_loomio_beta: 'Confira Loomio beta'
-      more: 'Mais'
-      top: 'Início'
-      public_groups: 'Grupos públicos'
-      terms: 'Termos'
-      privacy: 'Privacidade'
-      services: 'Serviços'
+      blog: Blog
+      contact: Contato
+      donate: Doe hoje
+      press: Imprensa
+      try_it: Experimente
+      log_in: Entrar
+      video: Saiba mais sobre como Loomio funciona
+      try_loomio_beta: Experimente Loomio beta
+      check_out_loomio_beta: Confira Loomio beta
+      more: Mais
+      top: Início
+      public_groups: Grupos públicos
+      terms: Termos
+      privacy: Privacidade
+      services: Serviços
     hero:
-      head_html: 'O mundo precisa de um jeito melhor para <strong>tomar decisões em conjunto.</strong>'
-      desc_html: 'Loomio é um programa gratuito e de <a href="https://github.com/loomio/loomio">código aberto</a> para qualquer pessoa, em qualquer lugar, participar de decisões.'
+      head_html: "O mundo precisa de um jeito melhor para <strong>tomar decisões em conjunto.</strong>"
+      desc_html: "Loomio é um programa gratuito e de <a href=\"https://github.com/loomio/loomio\">código aberto</a> para qualquer pessoa, em qualquer lugar, participar de decisões."
     product:
-      header_html: 'Quandos nós ouvimos <strong>todas as vozes</strong>, nós tomamos <strong>decisões melhores</strong>.'
+      header_html: "Quandos nós ouvimos <strong>todas as vozes</strong>, nós tomamos <strong>decisões melhores</strong>."
       step1:
-        header: '1. Converse sobre'
-        desc: 'Inicie uma discussão sobre qualquer assunto e traga as pessoas certas. Compartilhe perspectivas diversas e desenvolva as ideias em conjunto. '
+        header: 1. Converse sobre
+        desc: "Inicie uma discussão sobre qualquer assunto e traga as pessoas certas. Compartilhe perspectivas diversas e desenvolva as ideias em conjunto. "
       step2:
-        header: '2. Construa o consenso'
-        desc: 'Qualquer pessoa pode propor algo a ser feito. As pessoas podem concordar, abster-se, discordar, ou bloquear – para que você possa ver como todo mundo se sente, e por quê.'
+        header: 2. Construa o consenso
+        desc: "Qualquer pessoa pode propor algo a ser feito. As pessoas podem concordar, abster-se, discordar, ou bloquear – para que você possa ver como todo mundo se sente, e por quê."
       step3:
-        header: '3. Decida em conjunto'
-        desc: 'Desenvolva a proposta em conjunto para que ela funciona para todo mundo. Toda decisão tem um prazo claro, para que você sempre tenha um resultado claro.'
+        header: 3. Decida em conjunto
+        desc: "Desenvolva a proposta em conjunto para que ela funciona para todo mundo. Toda decisão tem um prazo claro, para que você sempre tenha um resultado claro."
     crowdfunding:
-      header: 'Estamos buscando o financiamento coletivo para que possamos terminar de construir esta nova plataforma e entregá-la para o mundo.'
+      header: Estamos buscando o financiamento coletivo para que possamos terminar de construir esta nova plataforma e entregá-la para o mundo.
     prototype:
-      header_html: "Já construímos um protótipo e pessoas de todo o mundo estão fazendo coisas incríveis com ele"
-      subhead_html: '<a href="%{try_loomio_link}">Experimente Loomio Beta</a> agora. Ou você pode <a href="%{donate_link}">apoiar o projeto</a> para ajudar a financiar o Loomio 1.0'
+      header_html: Já construímos um protótipo e pessoas de todo o mundo estão fazendo coisas incríveis com ele
+      subhead_html: "<a href=\"%{try_loomio_link}\">Experimente Loomio Beta</a> agora. Ou você pode <a href=\"%{donate_link}\">apoiar o projeto</a> para ajudar a financiar o Loomio 1.0"
     mobile:
-      header_html: 'Loomio 1.0 vai funcionar em qualquer dispositivo, construído com o melhor em <strong>tecnologia móvel aberta.</strong>'
+      header_html: "Loomio 1.0 vai funcionar em qualquer dispositivo, construído com o melhor em <strong>tecnologia móvel aberta.</strong>"
     quote:
       header:
-        rushkoff_html: '“O Loomio <strong>libera o potencial da internet</strong> para levar as pessoas em direção ao consenso em vez do debate polarizado.” <div class="attributation">– <a href="http://rushkoff.com">Douglas Rushkoff</a>, autor de <em>Present Shock</em></div>'
-        sifry_html: '“O Loomio está alcançado o ponto doce entre <strong>a voz individual</strong> e <strong>a decisão coletiva</strong>.” <div class="attributation">– Micah Sifry, Editor, <em><a href="http://techpresident.com">TechPresident</a></em></div>'
+        rushkoff_html: "“O Loomio <strong>libera o potencial da internet</strong> para levar as pessoas em direção ao consenso em vez do debate polarizado.” <div class=\"attributation\">– <a href=\"http://rushkoff.com\">Douglas Rushkoff</a>, autor de <em>Present Shock</em></div>"
+        sifry_html: "“O Loomio está alcançado o ponto doce entre <strong>a voz individual</strong> e <strong>a decisão coletiva</strong>.” <div class=\"attributation\">– Micah Sifry, Editor, <em><a href=\"http://techpresident.com\">TechPresident</a></em></div>"
     team:
-      header: 'Sobre o Loomio'
-      desc: 'Somos uma pequena equipe de desenvolvedores de código aberto e ativistas de justiça social que trabalham na Enspiral em Aotearoa, Nova Zelândia, com uma ampla rede de amigos, apoiadores e conselheiros de todo o mundo.'
+      header: Sobre o Loomio
+      desc: "Somos uma pequena equipe de desenvolvedores de código aberto e ativistas de justiça social que trabalham na Enspiral em Aotearoa, Nova Zelândia, com uma ampla rede de amigos, apoiadores e conselheiros de todo o mundo."
     ideals:
       community:
-        header: 'Cooperação conduzida pela comunidade'
-        desc: 'O Loomio é construído por uma cooperativa de propriedade dos trabalhadores. Somos uma empresa social que trabalha para maximizar o impacto social positivo, e não o lucro.'
+        header: Cooperação conduzida pela comunidade
+        desc: "O Loomio é construído por uma cooperativa de propriedade dos trabalhadores. Somos uma empresa social que trabalha para maximizar o impacto social positivo, e não o lucro."
       independent:
-        header: 'Independente e neutro'
-        desc: 'Mantemos um espaço para qualquer grupo se reunir independente de interesses políticos ou corporativos. Nós nunca venderemos seus dados.'
+        header: Independente e neutro
+        desc: Mantemos um espaço para qualquer grupo se reunir independente de interesses políticos ou corporativos. Nós nunca venderemos seus dados.
       open:
-        header: 'Programa de código livre e aberto'
-        desc: 'O código do Loomio é um recurso público que qualquer pessoa pode executar, ler, estudar, modificar e redistribuir.'
+        header: Programa de código livre e aberto
+        desc: "O código do Loomio é um recurso público que qualquer pessoa pode executar, ler, estudar, modificar e redistribuir."
       gift:
-        header: 'Economia do Presente'
-        desc: 'O Loomio é apoiado por aqueles que pagam de acordo com suas possibilidades. Isso mantém a plataforma livre de publicidade e acessível a grupos sem dinheiro.'
+        header: Economia do Presente
+        desc: O Loomio é apoiado por aqueles que pagam de acordo com suas possibilidades. Isso mantém a plataforma livre de publicidade e acessível a grupos sem dinheiro.
     vision:
-      header: 'Ajude-nos a transformar essa visão em realidade.'
+      header: Ajude-nos a transformar essa visão em realidade.
