--- a/config/locales/frontpage.ru.yml
+++ b/config/locales/frontpage.ru.yml
@@ -1,66 +1,64 @@
 ru:
   frontpage:
-    view_this_in_your_language: 'Переключить язык на %{language}'
+    view_this_in_your_language: "Переключить язык на %{language}"
     title:
       collaborative_decision_making: Совместное принятие решений
     link:
-      blog: 'Блог'
-      contact: 'Контактная информация'
-      donate: 'Пожертвуйте сейчас'
-      press: 'Пресса'
-      try_it: 'Попробуйте!'
-      log_in: 'Вход'
-      video: "Как работает Loomio?"
-      try_loomio_beta: 'Попробуйте бета-версию Loomio'
-      check_out_loomio_beta: 'Попробуйте бета-версию Loomio'
-      more: 'Больше'
-      top: 'Наверх'
-      public_groups: 'Oбщедоступные группы'
-      terms: 'Условия'
-      privacy: 'Конфиденциальность'
-      services: 'Услуги'
+      blog: Блог
+      contact: Контактная информация
+      donate: Пожертвуйте сейчас
+      press: Пресса
+      try_it: "Попробуйте!"
+      log_in: Вход
+      video: Как работает Loomio?
+      try_loomio_beta: Попробуйте бета-версию Loomio
+      check_out_loomio_beta: Попробуйте бета-версию Loomio
+      more: Больше
+      top: Наверх
+      public_groups: Oбщедоступные группы
+      terms: Условия
+      privacy: Конфиденциальность
+      services: Услуги
     hero:
-      head_html: 'Этому миру нужны инструменты для
-
-        <strong>совместного принятия решений</strong>.'
-      desc_html: 'Loomio бесплатен и <a href="https://github.com/loomio/loomio">открыт</a> для участия в принятии решений всех, везде и всегда.'
+      head_html: "Этому миру нужны инструменты для\n<strong>совместного принятия решений</strong>."
+      desc_html: "Loomio бесплатен и <a href=\"https://github.com/loomio/loomio\">открыт</a> для участия в принятии решений всех, везде и всегда."
     product:
-      header_html: 'Когда мы слышим<strong> все мнения</strong>, мы принимаем <strong>лучшие решения</strong>.'
+      header_html: "Когда мы слышим<strong> все мнения</strong>, мы принимаем <strong>лучшие решения</strong>."
       step1:
-        header: '1. Обсудить'
-        desc: 'Начните обсуждение на любую тему, привлекая заинтересованных людей. Обменивайтесь мыслями и развивайте идеи вместе.'
+        header: 1. Обсудить
+        desc: "Начните обсуждение на любую тему, привлекая заинтересованных людей. Обменивайтесь мыслями и развивайте идеи вместе."
       step2:
-        header: '2. Прийти к согласию'
-        desc: 'Порядок действий может предложить любой человек. Люди могут соглашаться, воздерживаться, не соглашаться или блокировать - так что вы можете видеть, что каждый думает и почему.'
+        header: 2. Прийти к согласию
+        desc: "Порядок действий может предложить любой человек. Люди могут соглашаться, воздерживаться, не соглашаться или блокировать - так что вы можете видеть, что каждый думает и почему."
       step3:
-        header: '3. Принять совместное решение'
-        desc: 'Работайте над идеей вместе, так, чтобы решение устраивало всех. Каждое решение имеет чёткую дату завершения, поэтому результаты всегда видны.'
+        header: 3. Принять совместное решение
+        desc: "Работайте над идеей вместе, так, чтобы решение устраивало всех. Каждое решение имеет чёткую дату завершения, поэтому результаты всегда видны."
     crowdfunding:
-      header: 'Мы работаем по принципу краудфандинга, и таким образом достроим эту новую платформу и отдадим eё в мир.'
+      header: "Мы работаем по принципу краудфандинга, и таким образом достроим эту новую платформу и отдадим eё в мир."
     prototype:
-      header_html: "Мы уже создали пробную версию и множество людей со всего мира делают множество интересных вещей с ее помощью."
-      subhead_html: '<a href="%{try_loomio_link}">Попробуйте Loomio Beta</a>. <a href="%{donate_link}">Поддержите нас</a>, чтобы помочь в создании Loomio 1.0'
+      header_html: Мы уже создали пробную версию и множество людей со всего мира делают множество интересных вещей с ее помощью.
+      subhead_html: "<a href=\"%{try_loomio_link}\">Попробуйте Loomio Beta</a>. <a href=\"%{donate_link}\">Поддержите нас</a>, чтобы помочь в создании Loomio 1.0"
     mobile:
-      header_html: 'Loomio 1.0, построенный на лучших открытых решениях, будет работать на <strong>любом мобильном устройстве</strong>.'
+      header_html: "Loomio 1.0, построенный на лучших открытых решениях, будет работать на <strong>любом мобильном устройстве</strong>."
     quote:
       header:
-        rushkoff_html: '"Loomio <strong>реализует потенциал Интернета</strong>, чтобы привести людей к консенсусу, а не к полярным дебатам", <div class="attributation"> — <a href="http://rushkoff.com"> Дуглас Рашкоф</a>, автор книги <em>Present Shock</em></div>'
-        sifry_html: '"Loomio попадает в золотую середину между  <strong>индивидуальным голосом</strong> и <strong>коллективными решениями</strong>", <div class="attributation">— Micah Sifry,  <em><a href="http://techpresident.com">редактор TechPresident.</a></em></div>'
+        rushkoff_html: "\"Loomio <strong>реализует потенциал Интернета</strong>, чтобы привести людей к консенсусу, а не к полярным дебатам\", <div class=\"attributation\"> — <a href=\"http://rushkoff.com\"> Дуглас Рашкоф</a>, автор книги <em>Present Shock</em></div>"
+        sifry_html: "\"Loomio попадает в золотую середину между  <strong>индивидуальным голосом</strong> и <strong>коллективными решениями</strong>\", <div class=\"attributation\">— Micah Sifry,  <em><a href=\"http://techpresident.com\">редактор TechPresident.</a></em></div>"
     team:
-      header: 'О Loomio'
-      desc: 'Мы небольшая команда разработчиков свободного программного обеспечения и активистов за социальную справедливость, работающих на Enspiral в Аотеароа в Новой Зеландии, с широким кругом друзей, сторонников и консультантов по всему миру.'
+      header: О Loomio
+      desc: "Мы небольшая команда разработчиков свободного программного обеспечения и активистов за социальную справедливость, работающих на Enspiral в Аотеароа в Новой Зеландии, с широким кругом друзей, сторонников и консультантов по всему миру."
     ideals:
       community:
-        header: 'Инициатива, развиваемая сообществом'
-        desc: 'Loomio создан рабочим кооперативом. Мы социальное предприятие, которое добивается максимально положительного социального эффекта, а не прибыли.'
+        header: "Инициатива, развиваемая сообществом"
+        desc: "Loomio создан рабочим кооперативом. Мы социальное предприятие, которое добивается максимально положительного социального эффекта, а не прибыли."
       independent:
-        header: 'Независимость и нейтральность'
-        desc: 'Мы поддерживаем пространство для любой группы, которая хочет собраться вместе, это не зависит от политических или корпоративных интересов. Мы никогда не продадим вашу информацию.'
+        header: Независимость и нейтральность
+        desc: "Мы поддерживаем пространство для любой группы, которая хочет собраться вместе, это не зависит от политических или корпоративных интересов. Мы никогда не продадим вашу информацию."
       open:
-        header: 'Бесплатный и открытый программный продукт'
-        desc: 'Лумио это свободная платформа, которую каждый может использовать, изменять и распространять'
+        header: Бесплатный и открытый программный продукт
+        desc: "Лумио это свободная платформа, которую каждый может использовать, изменять и распространять"
       gift:
-        header: 'Экономика дара'
-        desc: 'Loomio поддерживается теми, кто платит столько, сколько может. Это держит платформу, свободной от рекламы и доступной для тех, кто не может платить.'
+        header: Экономика дара
+        desc: "Loomio поддерживается теми, кто платит столько, сколько может. Это держит платформу, свободной от рекламы и доступной для тех, кто не может платить."
     vision:
-      header: 'Помогите нам воплотить эту мечту.'
+      header: Помогите нам воплотить эту мечту.
