--- a/config/locales/frontpage.sl.yml
+++ b/config/locales/frontpage.sl.yml
@@ -1,64 +1,64 @@
 sl:
   frontpage:
-    view_this_in_your_language: 'Oglej si stran v %{language}'
+    view_this_in_your_language: "Oglej si stran v %{language}"
     title:
       collaborative_decision_making: Skupnostno sprejemanje odločitev
     link:
-      blog: 'Blog'
-      contact: 'Kontakt'
-      donate: 'Prispevajte še danes'
-      press: 'Mediji'
-      try_it: 'Preizkusite'
-      log_in: 'Prijava'
+      blog: Blog
+      contact: Kontakt
+      donate: Prispevajte še danes
+      press: Mediji
+      try_it: Preizkusite
+      log_in: Prijava
       video: "Več o tem, kako Loomio deluje"
-      try_loomio_beta: 'Preizkusite Loomio beta'
-      check_out_loomio_beta: 'Preizkusi Loomio beta'
-      more: 'Več'
-      top: 'Nazaj na vrh'
-      public_groups: 'Javne skupine'
-      terms: 'Pogoji'
-      privacy: 'Zasebnost'
-      services: 'Storitve'
+      try_loomio_beta: Preizkusite Loomio beta
+      check_out_loomio_beta: Preizkusi Loomio beta
+      more: Več
+      top: Nazaj na vrh
+      public_groups: Javne skupine
+      terms: Pogoji
+      privacy: Zasebnost
+      services: Storitve
     hero:
-      head_html: 'Svet potrebuje boljši način za <strong> sprejemanje skupnih odločitev</strong>.'
-      desc_html: 'Loomio je prosta, <a href="https://github.com/loomio/loomio">odprtokodna</a> programska oprema, ki vsem omogoča sprejemanje odločitev, ki vplivajo nanje, kjerkoli že so.'
+      head_html: "Svet potrebuje boljši način za <strong> sprejemanje skupnih odločitev</strong>."
+      desc_html: "Loomio je prosta, <a href=\"https://github.com/loomio/loomio\">odprtokodna</a> programska oprema, ki vsem omogoča sprejemanje odločitev, ki vplivajo nanje, kjerkoli že so."
     product:
-      header_html: 'Ko slišimo <strong>vse glasove</strong>, sprejemamo  <strong>boljše odločitve</strong>.'
+      header_html: "Ko slišimo <strong>vse glasove</strong>, sprejemamo  <strong>boljše odločitve</strong>."
       step1:
-        header: '1. Predebatiraj'
-        desc: 'Prični razpravo o čemerkoli, privabi prave ljudi. Deli različne poglede in razvij ideje skupaj.'
+        header: 1. Predebatiraj
+        desc: "Prični razpravo o čemerkoli, privabi prave ljudi. Deli različne poglede in razvij ideje skupaj."
       step2:
-        header: '2. Ustvari dogovor'
-        desc: 'Vsakdo lahko predlaga novo pobudo. Drugi sodelujoči se lahko strinjajo, vzdržijo, ne strinjajo ali zavrnejo predlog - tako lahko vidite, kaj menijo o pobudi in zakaj.'
+        header: 2. Ustvari dogovor
+        desc: "Vsakdo lahko predlaga novo pobudo. Drugi sodelujoči se lahko strinjajo, vzdržijo, ne strinjajo ali zavrnejo predlog - tako lahko vidite, kaj menijo o pobudi in zakaj."
       step3:
-        header: '3. Odloči se skupaj z drugimi'
-        desc: 'Razvijte predlog skupaj tako, da ustreza vsem. Vsaka odločitev ima določen skrajni rok za sprejetje, zato je izid vedno nedvoumen.'
+        header: 3. Odloči se skupaj z drugimi
+        desc: "Razvijte predlog skupaj tako, da ustreza vsem. Vsaka odločitev ima določen skrajni rok za sprejetje, zato je izid vedno nedvoumen."
     crowdfunding:
-      header: 'Da bi do konca postavili to platformo in jo delili s svetom, sredstva množično zbiramo prek spleta.'
+      header: "Da bi do konca postavili to platformo in jo delili s svetom, sredstva množično zbiramo prek spleta."
     prototype:
-      header_html: "Ustvarili smo prototip in ljudje po vsem svetu z njim počnejo osupljive reči"
-      subhead_html: '<a href="%{try_loomio_link}">Preizkusi Loomio</a> zdaj. Ali pa <a href="%{donate_link}">podpri projekt</a> in pomagaj zagnati Loomio 1.0'
+      header_html: Ustvarili smo prototip in ljudje po vsem svetu z njim počnejo osupljive reči
+      subhead_html: "<a href=\"%{try_loomio_link}\">Preizkusi Loomio</a> zdaj. Ali pa <a href=\"%{donate_link}\">podpri projekt</a> in pomagaj zagnati Loomio 1.0"
     mobile:
-      header_html: 'Loomio 1.0 deluje na vseh napravah, saj smo ga razvili s pomočjo najboljših <strong>prenosljivih mobilnih tehnologij.</strong>'
+      header_html: "Loomio 1.0 deluje na vseh napravah, saj smo ga razvili s pomočjo najboljših <strong>prenosljivih mobilnih tehnologij.</strong>"
     quote:
       header:
-        rushkoff_html: '“Loomio <strong>s pomočjo interneta</strong> ljudi združuje pri doseganju konsenza, namesto da bi jih razdvajal.”<div class="attributation">– <a href="http://rushkoff.com">Douglas Rushkoff</a>, avtor knjige <em>Present Shock</em></div>'
-        sifry_html: '“Loomio uspešno združuje <strong>mnenja posameznikov</strong> v <strong>skupnostne odločitve</strong>.”<div class="attributation">– Micah Sifry, urednik, <em><a href="http://techpresident.com">TechPresident</a></em></div>'
+        rushkoff_html: "“Loomio <strong>s pomočjo interneta</strong> ljudi združuje pri doseganju konsenza, namesto da bi jih razdvajal.”<div class=\"attributation\">– <a href=\"http://rushkoff.com\">Douglas Rushkoff</a>, avtor knjige <em>Present Shock</em></div>"
+        sifry_html: "“Loomio uspešno združuje <strong>mnenja posameznikov</strong> v <strong>skupnostne odločitve</strong>.”<div class=\"attributation\">– Micah Sifry, urednik, <em><a href=\"http://techpresident.com\">TechPresident</a></em></div>"
     team:
-      header: 'O nas'
-      desc: 'Smo majhna skupina odprtokodnih razvijalcev in družbenih aktivistov, ki delujejo v coworking prostoru Enspiral z Nove Zelandije. Našo širšo mrežo prijateljev, podpornikov in svetovalcev tvorijo posamezniki z vsega sveta.'
+      header: O nas
+      desc: "Smo majhna skupina odprtokodnih razvijalcev in družbenih aktivistov, ki delujejo v coworking prostoru Enspiral z Nove Zelandije. Našo širšo mrežo prijateljev, podpornikov in svetovalcev tvorijo posamezniki z vsega sveta."
     ideals:
       community:
-        header: 'Zadruga, ki jo poganja skupnost'
-        desc: 'Loomio je zadruga, v kateri je lastništvo razdeljeno med njene zaposlene. Smo socialno podjetje, ki stremi k maksimizaciji pozitivnih družbenih učinkov, ne dobička.'
+        header: "Zadruga, ki jo poganja skupnost"
+        desc: "Loomio je zadruga, v kateri je lastništvo razdeljeno med njene zaposlene. Smo socialno podjetje, ki stremi k maksimizaciji pozitivnih družbenih učinkov, ne dobička."
       independent:
-        header: 'Neodvisno in nepristransko'
-        desc: 'Skupinam zagotavljamo prostor za združevanje, ki je neodvisen od političnih ali korporativnih interesov. Vaših podatkov ne bomo nikoli prodali naprej.'
+        header: Neodvisno in nepristransko
+        desc: "Skupinam zagotavljamo prostor za združevanje, ki je neodvisen od političnih ali korporativnih interesov. Vaših podatkov ne bomo nikoli prodali naprej."
       open:
-        header: 'Prosto in odprto programje'
-        desc: 'Loomiova koda je javna dobrina, ki jo lahko poganja, bere, se iz nje uči, spreminja in deli kdorkoli. '
+        header: Prosto in odprto programje
+        desc: "Loomiova koda je javna dobrina, ki jo lahko poganja, bere, se iz nje uči, spreminja in deli kdorkoli. "
       gift:
-        header: 'Ekonomija donacij'
-        desc: 'Loomio finančno podpirajo tisti, ki prispevajo po svojih zmožnostih. Tako platforma ostaja prosta oglasov in dostopna skupinam brez finančnih sredstev.'
+        header: Ekonomija donacij
+        desc: "Loomio finančno podpirajo tisti, ki prispevajo po svojih zmožnostih. Tako platforma ostaja prosta oglasov in dostopna skupinam brez finančnih sredstev."
     vision:
-      header: 'Pomagajte nam uresničiti vizijo.'
+      header: Pomagajte nam uresničiti vizijo.
