--- a/config/locales/frontpage.tr.yml
+++ b/config/locales/frontpage.tr.yml
@@ -1,64 +1,64 @@
 tr:
   frontpage:
-    view_this_in_your_language: 'Bu siteyi %{language} görüntüle'
+    view_this_in_your_language: "Bu siteyi %{language} görüntüle"
     title:
       collaborative_decision_making: İşbirliğine Dayalı Karar Verme
     link:
-      blog: 'Blog'
-      contact: 'İletişim'
-      donate: 'Bugün bağış yap'
-      press: 'Basın'
-      try_it: 'Deneyin'
-      log_in: 'Oturum aç'
+      blog: Blog
+      contact: İletişim
+      donate: Bugün bağış yap
+      press: Basın
+      try_it: Deneyin
+      log_in: Oturum aç
       video: "Loomio'nun nasıl çalıştığı hakkında daha fazla bilgi edin"
-      try_loomio_beta: 'Loomio beta''yı deneyin'
-      check_out_loomio_beta: 'Loomio beta''ya göz atın'
-      more: 'Daha fazla'
-      top: 'Sayfa başı'
-      public_groups: 'Genel gruplar'
-      terms: 'Şartlar'
-      privacy: 'Gizlilik'
-      services: 'Hizmetler'
+      try_loomio_beta: "Loomio beta'yı deneyin"
+      check_out_loomio_beta: "Loomio beta'ya göz atın"
+      more: Daha fazla
+      top: Sayfa başı
+      public_groups: Genel gruplar
+      terms: Şartlar
+      privacy: Gizlilik
+      services: Hizmetler
     hero:
-      head_html: 'Dünya''nın <strong>birlikte karar verebilmek</strong> için daha iyi bir yola ihtiyacı var.'
-      desc_html: 'Loomio herkes için, her yerde, kendilerini etkileyen kararlara katılmaları için ücretsiz ve <a href="https://github.com/loomio/loomio">açık kaynak kodlu</a> bir yazılımdır.'
+      head_html: "Dünya'nın <strong>birlikte karar verebilmek</strong> için daha iyi bir yola ihtiyacı var."
+      desc_html: "Loomio herkes için, her yerde, kendilerini etkileyen kararlara katılmaları için ücretsiz ve <a href=\"https://github.com/loomio/loomio\">açık kaynak kodlu</a> bir yazılımdır."
     product:
-      header_html: '<strong>Bütün sesler</ strong> duyulduğunda, <strong>daha iyi kararlar</strong> alırız.'
+      header_html: "<strong>Bütün sesler</strong> duyulduğunda, <strong>daha iyi kararlar</strong> alırız."
       step1:
-        header: '1. Konular hakkında konuşun'
-        desc: 'Doğru insanları biraraya getirin ve herhangi bir konuda bir müzakere başlatın. Farklı bakış açılarını birlikte paylaşın ve fikirler geliştirin.'
+        header: 1. Konular hakkında konuşun
+        desc: Doğru insanları biraraya getirin ve herhangi bir konuda bir müzakere başlatın. Farklı bakış açılarını birlikte paylaşın ve fikirler geliştirin.
       step2:
-        header: '2. Anlaşma oluşturun'
-        desc: 'Herkes bir faaliyet rotası önerebilir. İnsanlar, birbirlerinin görüşlerine katılabilir, çekimser kalabilir, katılmadığını belirtebilir ya da bloklayabilir - böylece herkesin nasıl hissettiğini görür ve nedenlerini anlayabilirsiniz.'
+        header: 2. Anlaşma oluşturun
+        desc: "Herkes bir faaliyet rotası önerebilir. İnsanlar, birbirlerinin görüşlerine katılabilir, çekimser kalabilir, katılmadığını belirtebilir ya da bloklayabilir - böylece herkesin nasıl hissettiğini görür ve nedenlerini anlayabilirsiniz."
       step3:
-        header: '3. Birlikte karar verin'
-        desc: 'Öneriyi birlikte geliştirirsiniz, böylece herkes için çalışır. Her kararın bir teslim süresi vardır, böylece her zaman net bir sonuç alırsınız.'
+        header: 3. Birlikte karar verin
+        desc: "Öneriyi birlikte geliştirirsiniz, böylece herkes için çalışır. Her kararın bir teslim süresi vardır, böylece her zaman net bir sonuç alırsınız."
     crowdfunding:
-      header: 'Yeni platformumuzu kurarak dünyaya hediye edebilmek icin bağış topluyoruz.'
+      header: Yeni platformumuzu kurarak dünyaya hediye edebilmek icin bağış topluyoruz.
     prototype:
-      header_html: "Biz şimdiden bir prototip geliştirdik ve dünyanın her yanından insanlar onunla inanılmaz şeyler yapıyor."
-      subhead_html: '<a href="%{try_loomio_link}">Loomio Beta</a>''yı şimdi deneyin. Ya da Loomio 1.0''a fon oluşturmamızda bize yardım etmek için <a href="%{donate_link}">projeye destek olun.</a>'
+      header_html: Biz şimdiden bir prototip geliştirdik ve dünyanın her yanından insanlar onunla inanılmaz şeyler yapıyor.
+      subhead_html: "<a href=\"%{try_loomio_link}\">Loomio Beta</a>'yı şimdi deneyin. Ya da Loomio 1.0'a fon oluşturmamızda bize yardım etmek için <a href=\"%{donate_link}\">projeye destek olun.</a>"
     mobile:
-      header_html: 'Loomio 1.0, en iyi <strong>açık kaynak mobil teknoloji</strong> ile ve herhangi bir cihaz üzerinde çalışacak şekilde geliştiriliyor.'
+      header_html: "Loomio 1.0, en iyi <strong>açık kaynak mobil teknoloji</strong> ile ve herhangi bir cihaz üzerinde çalışacak şekilde geliştiriliyor."
     quote:
       header:
-        rushkoff_html: '"Loomio insanları kutuplaşmış tartışmalardan ziyade fikir birliğine doğru getirmek için <strong>internetin potansiyelini ortaya çıkarıyor.</strong>"<div class="attributation">– <a href="http://rushkoff.com">Douglas Rushkoff</a>, yazar, <em>Present Shock</em></div>'
-        sifry_html: '"Loomio <strong>bireysel seslerin</strong> ve <strong>kolektif kararların</strong> arasında tatlı bir noktada duruyor."<div class="attributation">– Micah Sifry, Editör, <em><a href="http://techpresident.com">TechPresident</a></em></div>'
+        rushkoff_html: "\"Loomio insanları kutuplaşmış tartışmalardan ziyade fikir birliğine doğru getirmek için <strong>internetin potansiyelini ortaya çıkarıyor.</strong>\"<div class=\"attributation\">– <a href=\"http://rushkoff.com\">Douglas Rushkoff</a>, yazar, <em>Present Shock</em></div>"
+        sifry_html: "\"Loomio <strong>bireysel seslerin</strong> ve <strong>kolektif kararların</strong> arasında tatlı bir noktada duruyor.\"<div class=\"attributation\">– Micah Sifry, Editör, <em><a href=\"http://techpresident.com\">TechPresident</a></em></div>"
     team:
-      header: 'Loomio hakkında'
-      desc: 'Biz, Yeni Zelanda merkezli Enspiral''da çalışan, açık-kaynak programcıları ve sosyal adalet aktivistlerinden oluşan ve dünyanın her yerinde arkadaşları, destekçileri ve danışmanlarının olduğu küçük bir ekibiz.'
+      header: Loomio hakkında
+      desc: "Biz, Yeni Zelanda merkezli Enspiral'da çalışan, açık-kaynak programcıları ve sosyal adalet aktivistlerinden oluşan ve dünyanın her yerinde arkadaşları, destekçileri ve danışmanlarının olduğu küçük bir ekibiz."
     ideals:
       community:
-        header: 'Topluma odaklı işbirliğine dayalı'
-        desc: 'Loomio çalışanların sahibi olduğu kooperatif bir girişim tarafindan geliştirildi. Bizler kar etmek için değil, pozitif toplumsal etkileri en üst düzeye çıkartmak için çalışan bir sosyal girişimin üyeleriyiz.'
+        header: Topluma odaklı işbirliğine dayalı
+        desc: "Loomio çalışanların sahibi olduğu kooperatif bir girişim tarafindan geliştirildi. Bizler kar etmek için değil, pozitif toplumsal etkileri en üst düzeye çıkartmak için çalışan bir sosyal girişimin üyeleriyiz."
       independent:
-        header: 'Bağımsız ve tarafsız'
-        desc: 'Biz siyasi veya kurumsal topluluklardan bağımsız olarak, herhangi bir grubun bir araya gelmesi için güvenilir bir alan sağlıyoruz. Biz verilerinizi asla paylaşmaz ve satmayız.'
+        header: Bağımsız ve tarafsız
+        desc: "Biz siyasi veya kurumsal topluluklardan bağımsız olarak, herhangi bir grubun bir araya gelmesi için güvenilir bir alan sağlıyoruz. Biz verilerinizi asla paylaşmaz ve satmayız."
       open:
-        header: 'Ücretsiz ve açık yazılım'
-        desc: 'Loomio''nun kodu açık kaynaktır ve herkes bu kodu kullanabilir, öğrenebilir, değiştirebilir ve yeniden dağıtabilir.'
+        header: Ücretsiz ve açık yazılım
+        desc: "Loomio'nun kodu açık kaynaktır ve herkes bu kodu kullanabilir, öğrenebilir, değiştirebilir ve yeniden dağıtabilir."
       gift:
-        header: 'Hediye ekonomisi'
-        desc: 'Loomio kendi isteklerine göre ödeme yapanlar tarafından desteklenmektedir. Bu durum platformu reklamlardan arındırılmış ve parası olmayan her grup için erişilebilir kılar.'
+        header: Hediye ekonomisi
+        desc: Loomio kendi isteklerine göre ödeme yapanlar tarafından desteklenmektedir. Bu durum platformu reklamlardan arındırılmış ve parası olmayan her grup için erişilebilir kılar.
     vision:
-      header: 'Bu vizyonu gerçekleştirmemize yardımcı olun.'
+      header: Bu vizyonu gerçekleştirmemize yardımcı olun.
