--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -1,44 +1,44 @@
 pl:
   errors:
     messages:
-      email: "Nieprawidłowy adres e-mail"
+      email: Nieprawidłowy adres e-mail
   error:
-    cant_join_subgroup: "Nie możesz dołączyć do podgrupy jeśli nie jesteś członkiem grupy."
-    cant_modify_position: "Ta propozycja jest zamknięta."
-    cant_state_position: "Ta propozycja jest zamknięta."
-    discussion_not_created: "Dyskusja nie została utworzona."
+    cant_join_subgroup: Nie możesz dołączyć do podgrupy jeśli nie jesteś członkiem grupy.
+    cant_modify_position: Ta propozycja jest zamknięta.
+    cant_state_position: Ta propozycja jest zamknięta.
+    discussion_not_created: Dyskusja nie została utworzona.
     group_not_archived: "Grupa nie może zostać zarchiwizowana. "
     invalid_close_date: "Nieprawidłowa data zamknięcia, sprawdź czy termin nie upłynął."
     image_upload_fail: "Nie można przesłać zdjęcie. Upewnij się, że obraz jest mniejszy niż 1 MB i że to plik .jpeg, .png, lub .gif."
     permission_to_invite: "Nie masz uprawnień, żeby zapraszać członków."
-    position_not_updated: "Nie można zaktualizować stanowiska."
-    settings_not_updated: "Twoje ustawienia nie zostało zaktualizowane."
+    position_not_updated: Nie można zaktualizować stanowiska.
+    settings_not_updated: Twoje ustawienia nie zostało zaktualizowane.
   alert:
     duplicate_email: "%{which_email} is already in the group."
   notice:
-    member_removed: "Członek usunięty."
-    membership_request_canceled: "Prośba o członkostwo anulowana."
-    membership_request_ignored: "Prośba o członkostwo zignorowana."
-    settings_updated: "Twoje ustawienia zostały zaktualizowane."
+    member_removed: Członek usunięty.
+    membership_request_canceled: Prośba o członkostwo anulowana.
+    membership_request_ignored: Prośba o członkostwo zignorowana.
+    settings_updated: Twoje ustawienia zostały zaktualizowane.
     you_have_left_group: "Opuściłeś %{which_group}."
   warning:
-    membership_request_already_ignored: "Prośba o członkostwo została już zignorowana."
-    membership_request_already_canceled: "Prośba o członkostwo została już anulowana."
-    position_not_submitted: "Twoje stanowisko nie może zostać wysłane."
+    membership_request_already_ignored: Prośba o członkostwo została już zignorowana.
+    membership_request_already_canceled: Prośba o członkostwo została już anulowana.
+    position_not_submitted: Twoje stanowisko nie może zostać wysłane.
     proposal_not_created: "Propozycja nie może być utworzona. "
   success:
     added_to_group: "Zostałeś dodany do %{which_group}."
-    close_date_changed: "Data zamknięcia zmieniona."
-    discussion_created: "Dyskusja została utworzona."
-    discussion_deleted: "Dyskusja została usunięta."
+    close_date_changed: Data zamknięcia zmieniona.
+    discussion_created: Dyskusja została utworzona.
+    discussion_deleted: Dyskusja została usunięta.
     emails_sending: "Wysyłanie emaili. "
-    group_archived: "Grupa została zarchiwizowana pomyślnie."
-    group_created: "Grupa została utworzona pomyślnie."
-    members_added: "Nowe osoby dodane do grupy."
-    position_submitted: "Stanowisko zostało przesłane."
-    position_updated: "Stanowisko zostało zaktualizowane."
-    proposal_created: "Propozycja utworzona pomyślnie."
-    proposal_deleted: "Propozycja usunięta."
+    group_archived: Grupa została zarchiwizowana pomyślnie.
+    group_created: Grupa została utworzona pomyślnie.
+    members_added: Nowe osoby dodane do grupy.
+    position_submitted: Stanowisko zostało przesłane.
+    position_updated: Stanowisko zostało zaktualizowane.
+    proposal_created: Propozycja utworzona pomyślnie.
+    proposal_deleted: Propozycja usunięta.
   datetime:
     distance_in_words:
       x_seconds:
@@ -46,136 +46,134 @@ pl:
         few: "%{count} sekundy"
         other: "%{count} sekund"
       less_than_x_minutes:
-        one: "minuta"
+        one: minuta
         few: "%{count} minut"
         other: "%{count} minut"
       x_minutes:
-        one: "minuta"
+        one: minuta
         few: "%{count} minut"
         other: "%{count} minut"
       about_x_hours:
-        one: "godzina"
+        one: godzina
         few: "%{count} godzin"
         other: "%{count} godzin"
       x_days:
-        one: "dzień"
+        one: dzień
         few: "%{count} dni"
         other: "%{count} dni"
       about_x_years:
-        one: "rok"
+        one: rok
         few: "%{count} lata"
         other: "%{count} lat"
       over_x_years:
-        one: "rok"
+        one: rok
         few: "%{count} lata"
         other: "%{count} lat"
       almost_x_years:
-        one: "rok"
+        one: rok
         few: "%{count} lata"
         other: "%{count} lat"
   footer:
-    blog: 'Blog'
-    contact: 'Kontakt'
-    privacy: 'Prywatność'
+    blog: Blog
+    contact: Kontakt
+    privacy: Prywatność
   notifications:
-    header: "Powiadomienia"
+    header: Powiadomienia
     motion_closed:
-      by_user: "zamknij propozycję"
-      by_expiry: "Propozycja została zamknięta"
-  see_all_notifications: "Zobacz wszystkie powiadomienia"
-  sign_out: "Wyloguj się"
-  generic_confirm: "Czy jesteś pewien?"
-  invite_people: "Zaproś ludzi"
-  add_new_member: "Dodaj nowego członka"
-  edit_group_settings: "Edycja ustawień grupy"
-  leave_group: "Opuść grupę"
-  invited_users: "Zaproszeni członkowie"
-  members: "Członkowie"
-  ignore_request: "Ignoruj prośbę"
-  ignore: "Ignoruj"
-  subgroups: "Podgrupy"
-  create_a_subgroup: "Utwórz podgrupę"
-  invite_members: "Zaproś członków"
-  new_subgroup: "Nowa podgrupa"
-  create_subgroup: "Utwórz podgrupę"
-  creating_subgroup: "Tworzenie podgrupy"
-  new_group: "Nowa grupa"
-  create_group: "Utwórz grupę"
-  creating_group: "Tworzenie grupy"
-  edit_group: "Edycja grupy"
-  update_group: "Aktualizacja grupy"
-  updating_group: "Aktualizowanie grupy"
-  start_a_discussion: "Rozpocznij dyskusję"
-  group_description: "Opis grupy"
+      by_user: zamknij propozycję
+      by_expiry: Propozycja została zamknięta
+  see_all_notifications: Zobacz wszystkie powiadomienia
+  sign_out: Wyloguj się
+  generic_confirm: Czy jesteś pewien?
+  invite_people: Zaproś ludzi
+  add_new_member: Dodaj nowego członka
+  edit_group_settings: Edycja ustawień grupy
+  leave_group: Opuść grupę
+  invited_users: Zaproszeni członkowie
+  members: Członkowie
+  ignore_request: Ignoruj prośbę
+  ignore: Ignoruj
+  subgroups: Podgrupy
+  create_a_subgroup: Utwórz podgrupę
+  invite_members: Zaproś członków
+  new_subgroup: Nowa podgrupa
+  create_subgroup: Utwórz podgrupę
+  creating_subgroup: Tworzenie podgrupy
+  new_group: Nowa grupa
+  create_group: Utwórz grupę
+  creating_group: Tworzenie grupy
+  edit_group: Edycja grupy
+  update_group: Aktualizacja grupy
+  updating_group: Aktualizowanie grupy
+  start_a_discussion: Rozpocznij dyskusję
+  group_description: Opis grupy
   discussion_items:
     motion_closed:
-      by_expiry: "Propozycja zamknięta"
-  discussion: "Dyskusja"
-  current_decision: "Obecna decyzja"
-  previous_decisions: "Wcześniejsze decyzje"
+      by_expiry: Propozycja zamknięta
+  discussion: Dyskusja
+  current_decision: Obecna decyzja
+  previous_decisions: Wcześniejsze decyzje
   description_history:
-    subheader: "Wersja"
-  comment_form_placeholder: "Powiedz coś..."
-  delete_comment: "Usuń komentarz"
-  delete_discussion: "Usuń dyskusję"
-  new_proposal: "Nowa propozycja"
-  close_proposal: "Zamknij propozycję"
-  change_proposal_close_date: "Zmień datę zamknięcia"
-  state_your_position: "Podaj swoje stanowisko"
-  positions: "Stanowiska"
-  yes_position: "Zgadzam się"
-  no_position: "Nie zgadzam się"
+    subheader: Wersja
+  comment_form_placeholder: Powiedz coś...
+  delete_comment: Usuń komentarz
+  delete_discussion: Usuń dyskusję
+  new_proposal: Nowa propozycja
+  close_proposal: Zamknij propozycję
+  change_proposal_close_date: Zmień datę zamknięcia
+  state_your_position: Podaj swoje stanowisko
+  positions: Stanowiska
+  yes_position: Zgadzam się
+  no_position: Nie zgadzam się
   help:
-    help: "Pomoc"
-    how_it_works: "Jak to działa"
-    join_the_community: "Dołącz do społeczności"
-    make_a_decision: "Podejmij decyzję"
+    help: Pomoc
+    how_it_works: Jak to działa
+    join_the_community: Dołącz do społeczności
+    make_a_decision: Podejmij decyzję
   hint:
-    vote: 'W każdej chwili możesz zmienić swoje stanowisko'
-  new_password: "Nowe hasło"
-  current_password: "Obecne hasło"
-  remember_me: "Zapamiętaj mnie"
-  forgot_your_password: "Zapomniałeś hasła?"
+    vote: W każdej chwili możesz zmienić swoje stanowisko
+  new_password: Nowe hasło
+  current_password: Obecne hasło
+  remember_me: Zapamiętaj mnie
+  forgot_your_password: Zapomniałeś hasła?
   search:
-    placeholder: "Szukaj"
+    placeholder: Szukaj
   vote_form:
-    header: "Podaj swoje stanowisko"
-    edit: "Edycja Twego stanowiska"
-    your_position: "Twoje stanowisko"
-    submit: "Prześlij stanowisko"
-    update: "Zaktualizuj stanowisko"
+    header: Podaj swoje stanowisko
+    edit: Edycja Twego stanowiska
+    your_position: Twoje stanowisko
+    submit: Prześlij stanowisko
+    update: Zaktualizuj stanowisko
   simple_form:
-    'yes': 'Tak'
-    'no': 'Nie'
+    "yes": Tak
+    "no": Nie
     labels:
       membership_request:
-        introduction: "Przedstaw się"
+        introduction: Przedstaw się
       user:
-        password_confirmation: "Potwierdź hasło"
-        language_preference: "Język"
+        password_confirmation: Potwierdź hasło
+        language_preference: Język
     placeholders:
       user:
-        password: "Hasło"
+        password: Hasło
   helpers:
     submit:
       user:
-        update: "Zaktualizuj ustawienia"
+        update: Zaktualizuj ustawienia
   email:
     invitation:
       hi: "Witaj %{name},"
-      thanks: |
-        Dziękujemy!
-        Zespół Loomio
-  author: "Autor"
-  decisions: "Decyzje"
-  details: "Szczegóły"
-  discussions: "Dyskusje"
-  group: "Grupa"
-  password: "Hasło"
-  pricing: 'Opłaty'
-  options: "Opcje"
-  save: "Zapisz"
-  saving: "Zapisywanie"
+      thanks: "Dziękujemy!\nZespół Loomio\n"
+  author: Autor
+  decisions: Decyzje
+  details: Szczegóły
+  discussions: Dyskusje
+  group: Grupa
+  password: Hasło
+  pricing: Opłaty
+  options: Opcje
+  save: Zapisz
+  saving: Zapisywanie
   thanks: "Dziękujemy!"
   common:
-    email: "E-mail"
+    email: E-mail
