--- a/config/locales/ur.yml
+++ b/config/locales/ur.yml
@@ -2,4 +2,4 @@ ur:
   users:
     email_preferences:
       edit:
-        when_do_you_want_emails: 'مجھے ای میل کریں'
+        when_do_you_want_emails: مجھے ای میل کریں
